Americanism: intrust => entrust

--- a/tex/p007.tex
+++ b/tex/p007.tex
@@ -37,7 +37,7 @@
 \vs p007 4:4 \ublistelem{1.}\bibnobreakspace \bibemph{The Plan of Progressive Attainment.} This is the Universal Father’s plan of evolutionary ascension, a program unreservedly accepted by the Eternal Son when he concurred in the Father’s proposal, “Let us make mortal creatures in our own image.” This provision for upstepping the creatures of time involves the Father’s bestowal of the Thought Adjusters and the endowing of material creatures with the prerogatives of personality.
 \vs p007 4:5 \ublistelem{2.}\bibnobreakspace \bibemph{The Bestowal Plan.} The next universal plan is the great Father\hyp{}revelation enterprise of the Eternal Son and his co\hyp{}ordinate Sons. This is the proposal of the Eternal Son and consists of his bestowal of the Sons of God upon the evolutionary creations, there to personalize and factualize, to incarnate and make real, the love of the Father and the mercy of the Son to the creatures of all universes. Inherent in the bestowal plan, and as a provisional feature of this ministration of love, the Paradise Sons act as rehabilitators of that which misguided creature will has placed in spiritual jeopardy. Whenever and wherever there occurs a delay in the functioning of the attainment plan, if rebellion, perchance, should mar or complicate this enterprise, then do the emergency provisions of the bestowal plan become active forthwith. The Paradise Sons stand pledged and ready to function as retrievers, to go into the very realms of rebellion and there restore the spiritual status of the spheres. And such a heroic service a co\hyp{}ordinate Creator Son did perform on Urantia in connection with his experiential bestowal career of sovereignty acquirement.
 \vs p007 4:6 \ublistelem{3.}\bibnobreakspace \bibemph{The Plan of Mercy Ministry.} When the attainment plan and the bestowal plan had been formulated and proclaimed, alone and of himself, the Infinite Spirit projected and put in operation the tremendous and universal enterprise of mercy ministry. This is the service so essential to the practical and effective operation of both the attainment and the bestowal undertakings, and the spiritual personalities of the Third Source and Centre all partake of the spirit of mercy ministry which is so much a part of the nature of the Third Person of Deity. Not only in creation but also in administration, the Infinite Spirit functions truly and literally as the conjoint executive of the Father and the Son.
-\vs p007 4:7 \pc The Eternal Son is the personal trustee, the divine custodian, of the Father’s universal plan of creature ascension. Having promulgated the universal mandate, “Be you perfect, even as I am perfect,” the Father intrusted the execution of this tremendous undertaking to the Eternal Son; and the Eternal Son shares the fostering of this supernal enterprise with his divine co\hyp{}ordinate, the Infinite Spirit. Thus do the Deities effectively co\hyp{}operate in the work of creation, control, evolution, revelation, and ministration --- and if required, in restoration and rehabilitation.
+\vs p007 4:7 \pc The Eternal Son is the personal trustee, the divine custodian, of the Father’s universal plan of creature ascension. Having promulgated the universal mandate, “Be you perfect, even as I am perfect,” the Father entrusted the execution of this tremendous undertaking to the Eternal Son; and the Eternal Son shares the fostering of this supernal enterprise with his divine co\hyp{}ordinate, the Infinite Spirit. Thus do the Deities effectively co\hyp{}operate in the work of creation, control, evolution, revelation, and ministration --- and if required, in restoration and rehabilitation.
 \usection{5.\bibnobreakspace The Spirit of Bestowal}
 \vs p007 5:1 The Eternal Son without reservation joined with the Universal Father in broadcasting that tremendous injunction to all creation: “Be you perfect, even as your Father in Havona is perfect.” And ever since, that invitation\hyp{}command has motivated all the survival plans and the bestowal projects of the Eternal Son and his vast family of co\hyp{}ordinate and associated Sons. And in these very bestowals the Sons of God have become to all evolutionary creatures “the way, the truth, and the life.”
 \vs p007 5:2 \pc The Eternal Son cannot contact directly with human beings as does the Father through the gift of the prepersonal Thought Adjusters, but the Eternal Son does draw near to created personalities by a series of downstepping gradations of divine sonship until he is enabled to stand in man’s presence and, at times, as man himself.
