--- a/tex/p009.tex
+++ b/tex/p009.tex
@@ -21,7 +21,7 @@
 \vs p009 2:4 In addition to these Paradise presences, Urantians benefit by the spiritual influences and activities of the local and the superuniverse, with their almost endless array of loving personalities who ever lead the true of purpose and the honest of heart upward and inward towards the ideals of divinity and the goal of supreme perfection.
 \vs p009 2:5 The presence of the universal spirit of the Eternal Son we \bibemph{know ---} we can unmistakably recognize it. The presence of the Infinite Spirit, the Third Person of Deity, even mortal man may know, for material creatures can actually experience the beneficence of this divine influence which functions as the Holy Spirit of local universe bestowal upon the races of mankind. Human beings can also in some degree become conscious of the Adjuster, the impersonal presence of the Universal Father. These divine spirits which work for man’s uplifting and spiritualization all act in unison and in perfect co\hyp{}operation. They are as one in the spiritual operation of the plans of mortal ascension and perfection attainment.
 \usection{3.\bibnobreakspace The Universal Manipulator}
-\vs p009 3:1 The Isle of Paradise is the source and substance of physical gravity; and that should be sufficient to inform you that gravity is one of the most \bibemph{real} and eternally dependable things in the whole physical universe of universes. Gravity cannot be modified or annulled except by the forces and energies conjointly sponsored by the Father and the Son, which have been intrusted to, and are functionally associated with, the person of the Third Source and Centre.
+\vs p009 3:1 The Isle of Paradise is the source and substance of physical gravity; and that should be sufficient to inform you that gravity is one of the most \bibemph{real} and eternally dependable things in the whole physical universe of universes. Gravity cannot be modified or annulled except by the forces and energies conjointly sponsored by the Father and the Son, which have been entrusted to, and are functionally associated with, the person of the Third Source and Centre.
 \vs p009 3:2 \pc The Infinite Spirit possesses a unique and amazing power --- \bibemph{antigravity.} This power is not functionally (observably) present in either the Father or the Son. This ability to withstand the pull of material gravity, inherent in the Third Source, is revealed in the personal reactions of the Conjoint Actor to certain phases of universe relationships. And this unique attribute is transmissible to certain of the higher personalities of the Infinite Spirit.
 \vs p009 3:3 \pc Antigravity can annul gravity within a local frame; it does so by the exercise of equal force presence. It operates only with reference to material gravity, and it is not the action of mind. The gravity\hyp{}resistant phenomenon of a gyroscope is a fair illustration of the \bibemph{effect} of antigravity but of no value to illustrate the \bibemph{cause} of antigravity.
 \vs p009 3:4 Still further does the Conjoint Actor display powers which can transcend force and neutralize energy. Such powers operate by slowing down energy to the point of materialization and by other techniques unknown to you.
