--- a/tex/p017.tex
+++ b/tex/p017.tex
@@ -44,7 +44,7 @@
 \vs p017 3:11 On the headquarters of each superuniverse the reflective organization acts as a segregated unit; but on certain special occasions, under the direction of Majeston, all seven may and do act in universal unison, as in the event of the jubilee occasioned by the settling of an entire local universe in light and life and at the times of the millennial greetings of the Seven Supreme Executives.
 \usection{4.\bibnobreakspace The Reflective Image Aids}
 \vs p017 4:1 The 49 Reflective Image Aids were created by the Reflective Spirits, and there are just 7 Aids on the headquarters of each superuniverse. The first creative act of the seven Reflective Spirits of Uversa was the production of their seven Image Aids, each Reflective Spirit creating his own Aid. The Image Aids are, in certain attributes and characteristics, perfect reproductions of their Reflective Mother Spirits; they are virtual duplications minus the attribute of reflectivity. They are true images and constantly function as the channel of communication between the Reflective Spirits and the superuniverse authorities. The Image Aids are not merely assistants; they are actual representations of their respective Spirit ancestors; they are \bibemph{images,} and they are true to their name.
-\vs p017 4:2 The Reflective Spirits themselves are true personalities but of such an order as to be incomprehensible to material beings. Even on a superuniverse headquarters sphere they require the assistance of their Image Aids in all personal intercourse with the Ancients of Days and their associates. In contacts between the Image Aids and the Ancients of Days, sometimes one Aid functions acceptably, while on other occasions two, three, four, or even all seven are required for the full and proper presentation of the communication intrusted to their transmission. Likewise, the messages of the Image Aids are variously received by one, two, or all three Ancients of Days, as the content of the communication may require.
+\vs p017 4:2 The Reflective Spirits themselves are true personalities but of such an order as to be incomprehensible to material beings. Even on a superuniverse headquarters sphere they require the assistance of their Image Aids in all personal intercourse with the Ancients of Days and their associates. In contacts between the Image Aids and the Ancients of Days, sometimes one Aid functions acceptably, while on other occasions two, three, four, or even all seven are required for the full and proper presentation of the communication entrusted to their transmission. Likewise, the messages of the Image Aids are variously received by one, two, or all three Ancients of Days, as the content of the communication may require.
 \vs p017 4:3 The Image Aids serve forever by the sides of their ancestral Spirits, and they have at their disposal an unbelievable host of helper seconaphim. The Image Aids do not directly function in connection with the training worlds of ascending mortals. They are closely associated with the intelligence service of the universal scheme of mortal progression, but you will not personally come in contact with them when you sojourn in the Uversa schools because these seemingly personal beings are devoid of will; they do not exercise the power of choice. They are true images, wholly reflective of the personality and mind of the individual Spirit ancestor. As a class, ascending mortals do not intimately contact with reflectivity. Always some being of the reflective nature will be interposed between you and the actual operation of the service.
 \usection{5.\bibnobreakspace The Seven Spirits of the Circuits}
 \vs p017 5:1 The Seven Spirits of the Havona Circuits are the joint impersonal representation of the Infinite Spirit and the Seven Master Spirits to the seven circuits of the central universe. They are the servants of the Master Spirits, whose collective offspring they are. The Master Spirits provide a distinct and diversified administrative individuality in the seven superuniverses. Through these uniform Spirits of the Havona Circuits they are enabled to provide a unified, uniform, and co\hyp{}ordinated spiritual supervision for the central universe.
