--- a/tex/p019.tex
+++ b/tex/p019.tex
@@ -50,7 +50,7 @@
 \usection{5.\bibnobreakspace Inspired Trinity Spirits}
 \vs p019 5:1 I will be able to tell you very little concerning the Inspired Trinity Spirits, for they are one of the few wholly secret orders of beings in existence, secret, no doubt, because it is impossible for them fully to reveal themselves even to those of us whose origin is so near the source of their creation. They come into being by the act of the Paradise Trinity and may be utilized by any one or two of the Deities as well as by all three. We do not know whether these Spirits are of completed numbers or are constantly increasing, but we incline to the belief that their number is not fixed.
 \vs p019 5:2 We fully understand neither the nature nor the conduct of the Inspired Spirits. They may possibly belong to the category of superpersonal spirits. They seem to operate over all known circuits and appear to act well\hyp{}nigh independently of time and space. But we know little about them except as we deduce their character from the nature of their activities, the results of which we certainly observe here and there in the universes.
-\vs p019 5:3 Under certain conditions these Inspired Spirits can individualize themselves sufficiently for recognition by beings of Trinity origin. I have seen them; but it would never be possible for the lower orders of celestial beings to recognize one of them. Certain circumstances also arise from time to time in the conduct of the evolving universes in which any being of Trinity origin may directly employ these Spirits in the furtherance of his assignments. We therefore know that they exist, and that under certain conditions we may command and receive their assistance, sometimes recognize their presence. But they are not a part of the manifest and definitely revealed organization intrusted with the conduct of the time\hyp{}space universes before such material creations are settled in light and life. They have no clearly discernible place in the present economy or administration of the evolving seven superuniverses. They are a secret of the Paradise Trinity.
+\vs p019 5:3 Under certain conditions these Inspired Spirits can individualize themselves sufficiently for recognition by beings of Trinity origin. I have seen them; but it would never be possible for the lower orders of celestial beings to recognize one of them. Certain circumstances also arise from time to time in the conduct of the evolving universes in which any being of Trinity origin may directly employ these Spirits in the furtherance of his assignments. We therefore know that they exist, and that under certain conditions we may command and receive their assistance, sometimes recognize their presence. But they are not a part of the manifest and definitely revealed organization entrusted with the conduct of the time\hyp{}space universes before such material creations are settled in light and life. They have no clearly discernible place in the present economy or administration of the evolving seven superuniverses. They are a secret of the Paradise Trinity.
 \vs p019 5:4 The Melchizedeks of Nebadon teach that Inspired Trinity Spirits are destined, sometime in the eternal future, to function in the places of the Solitary Messengers, whose ranks are slowly but certainly being depleted by their assignment as associates of certain types of trinitized sons.
 \vs p019 5:5 \pc The Inspired Spirits are the solitary Spirits of the universe of universes. As Spirits they are very much like the Solitary Messengers except that the latter are distinct personalities. We obtain much of our knowledge of the Inspired Spirits from the Solitary Messengers, who detect their nearness by virtue of an inherent sensitivity to the presence of the Inspired Spirits which functions just as unfailingly as a magnetic needle points to a magnetic pole. When a Solitary Messenger is near an Inspired Trinity Spirit, he is conscious of a qualitative indication of such a divine presence and also of a very definite quantitative registration which enables him actually to know the classification or number of the Spirit presence or presences.
 \vs p019 5:6 I may relate a further interesting fact: When a Solitary Messenger is on a planet whose inhabitants are indwelt by Thought Adjusters, as on Urantia, he is aware of a qualitative excitation in his detection\hyp{}sensitivity to spirit presence. In such instances there is no quantitative excitation, only a qualitative agitation. When on a planet to which Adjusters do not come, contact with the natives does not produce any such reaction. This suggests that Thought Adjusters are in some manner related to, or are connected with, the Inspired Spirits of the Paradise Trinity. In some way they may possibly be associated in certain phases of their work; but we do not really know. They both originate near the centre and source of all things, but they are not the same order of being. Thought Adjusters spring from the Father alone; Inspired Spirits are the offspring of the Paradise Trinity.
