--- a/tex/p022.tex
+++ b/tex/p022.tex
@@ -39,7 +39,7 @@
 \usection{4.\bibnobreakspace Those Without Name and Number}
 \vs p022 4:1 Those without Name and Number constitute the third and last group of the Trinitized Sons of Attainment; they are the ascendant souls who have developed the ability to worship beyond the skill of all the sons and daughters of the evolutionary races from the worlds of time and space. They have acquired a spiritual concept of the eternal purpose of the Universal Father which comparatively transcends the comprehension of the evolutionary creatures of name or number; therefore are they denominated Those without Name and Number. More strictly translated, their name would be “Those \bibemph{above} Name and Number.”
 \vs p022 4:2 This order of sons is embraced by the Paradise Trinity in groups of 7,000. There are of record on Uversa over 100,000,000 of these sons commissioned in Orvonton.
-\vs p022 4:3 Since Those without Name and Number are the superior spiritual minds of the survival races, they are especially qualified to sit in judgment and to render opinions when a spiritual viewpoint is desirable, and when experience in the ascendant career is essential to an adequate comprehension of the questions involved in the problem to be adjudicated. They are the supreme jurors of Orvonton. A maladministered jury system may be more or less of a travesty of justice on some worlds, but on Uversa and its extension tribunals we employ the highest type of evolved spiritual mentality as juror\hyp{}judges. Adjudication is the highest function of any government, and those who are intrusted with verdict rendering should be chosen from the highest and most noble types of the most experienced and understanding individuals.
+\vs p022 4:3 Since Those without Name and Number are the superior spiritual minds of the survival races, they are especially qualified to sit in judgment and to render opinions when a spiritual viewpoint is desirable, and when experience in the ascendant career is essential to an adequate comprehension of the questions involved in the problem to be adjudicated. They are the supreme jurors of Orvonton. A maladministered jury system may be more or less of a travesty of justice on some worlds, but on Uversa and its extension tribunals we employ the highest type of evolved spiritual mentality as juror\hyp{}judges. Adjudication is the highest function of any government, and those who are entrusted with verdict rendering should be chosen from the highest and most noble types of the most experienced and understanding individuals.
 \vs p022 4:4 \pc The selection of candidates for the trinitization classes of Mighty Messengers, Those High in Authority, and Those without Name and Number is inherent and automatic. The selective techniques of Paradise are not in any sense arbitrary. Personal experience and spiritual values determine the personnel of the Trinitized Sons of Attainment. Such beings are equal in authority and uniform in administrative status, but they all possess individuality and diverse characters; they are not standardized beings. All are characteristically different, depending on the differentials of their ascendant careers.
 \vs p022 4:5 In addition to these experiential qualifications, the Trinitized Sons of Attainment have been trinitized in the divine embrace of the Paradise Deities. Consequently they function as the co\hyp{}ordinate associates of the Stationary Sons of the Trinity, for the Trinity embrace does seem to precipitate out of the stream of future time many of the unrealized potentials of creature beings. But this is true concerning only that which pertains to the present universe age.
 \vs p022 4:6 This group of sons is chiefly, but not wholly, concerned with the services of the ascendant career of the time\hyp{}space mortals. If the viewpoint of a mortal creature is ever in doubt, the question is settled by appeal to an ascendant commission consisting of a Mighty Messenger, One High in Authority, and One without Name and Number.
@@ -89,7 +89,7 @@
 \usection{10.\bibnobreakspace High Son Assistants}
 \vs p022 10:1 The High Son Assistants are the superior group of the retrinitized trinitized sons of glorified ascendant beings of the Mortal Corps of the Finality and of their eternal associates, the Paradise\hyp{}Havona personalities. They are assigned to the superuniverse service and function as personal aids to the high sons of the governments of the Ancients of Days. They might fittingly be denominated private secretaries. They act, from time to time, as clerks for special commissions and other group associations of the high sons. They serve Perfectors of Wisdom, Divine Counsellors, Universal Censors, Mighty Messengers, Those High in Authority, and Those without Name and Number.
 \vs p022 10:2 \pc If, in discussing the Celestial Guardians, I have seemed to call attention to the limitations and handicaps of these twice\hyp{}trinitized sons, let me now, in all fairness, call attention to their one point of great strength, the attribute which makes them almost invaluable to us. These beings owe their very existence to the fact that they are the personification of a single and supreme concept. They are the personality embodiment of some divine idea, some universal ideal, as it has never before been conceived, expressed, or trinitized. And they have subsequently been Trinity embraced; thus they show forth and actually embody the very wisdom of the divine Trinity as concerns the idea\hyp{}ideal of their personality existence. As far as that particular concept is revealable to the universes, these personalities embody all of everything that any creature or Creator intelligence could possibly conceive, express, or exemplify. \bibemph{They are that idea personified.}
-\vs p022 10:3 Can you not see that such living concentrations of a single supreme concept of universe reality would be of untold service to those who are intrusted with the administration of the superuniverses?
+\vs p022 10:3 Can you not see that such living concentrations of a single supreme concept of universe reality would be of untold service to those who are entrusted with the administration of the superuniverses?
 \vs p022 10:4 \pc Not long since I was directed to head a commission of six --- one of each of the high sons --- assigned to the study of three problems pertaining to a group of new universes in the south parts of Orvonton. I was made acutely aware of the value of the High Son Assistants when I made requisition on the chief of their order on Uversa for temporary assignment of such secretaries to my commission. The first of our ideas was represented by a High Son Assistant on Uversa, who was forthwith attached to our group. Our second problem was embodied in a High Son Assistant assigned to superuniverse number three. We secured much help from this source through the central universe clearinghouse for the co\hyp{}ordination and dissemination of essential knowledge, but nothing comparable to the assistance afforded by the actual presence of a personality who \bibemph{is} a concept creature\hyp{}trinitized in supremacy and Deity\hyp{}trinitized in finality. Concerning our third problem, the records of Paradise disclosed that such an idea had never been creature trinitized.
 \vs p022 10:5 \pc High Son Assistants are unique and original personalizations of tremendous concepts and stupendous ideals. And as such they are able to impart inexpressible illumination to our deliberations from time to time. When I am acting on some remote assignment out in the universes of space, think what it means, by way of assistance, if I am so fortunate as to have attached to my mission a High Son Assistant who is the fullness of divine concept regarding the very problem I have been sent to attack and solve; and I have repeatedly had this very experience. The only difficulty with this plan is that no superuniverse can have a complete edition of these trinitized ideas; we only get \bibfrac{1}{7} of these beings; so it is only about one time in seven that we enjoy the personal association of these beings even when the records indicate that the idea has been trinitized.
 \vs p022 10:6 We could use to great advantage much larger numbers of these beings on Uversa. Because of their value to the superuniverse administrations, we, in every way possible, encourage the pilgrims of space and also the residents of Paradise to attempt trinitization after they have contributed to one another those experiential realities which are essential to the enactment of such creative adventures.
