--- a/tex/p028.tex
+++ b/tex/p028.tex
@@ -63,7 +63,7 @@
 \vs p028 6:6 The Memory of Mercy is a living trial balance, a current statement of your account with the supernatural forces of the realms. These are the living records of mercy ministration which are read into the testimony of the courts of Uversa when each individual’s right to unending life comes up for adjudication, when “thrones are cast up and the Ancients of Days are seated. The broadcasts of Uversa issue and come forth from before them; thousands upon thousands minister to them, and ten thousand times ten thousand stand before them. The judgment is set, and the books are opened.” And the books which are opened on such a momentous occasion are the living records of the tertiary seconaphim of the superuniverses. The formal records are on file to corroborate the testimony of the Memories of Mercy if they are required.
 \vs p028 6:7 The Memory of Mercy must show that the saving credit established by the Sons of God has been fully and faithfully paid out in the loving ministry of the patient personalities of the Third Source and Centre. But when mercy is exhausted, when the “memory” thereof testifies to its depletion, then does justice prevail and righteousness decree. For mercy is not to be thrust upon those who despise it; mercy is not a gift to be trampled under foot by the persistent rebels of time. Nevertheless, though mercy is thus precious and dearly bestowed, your individual drawing credits are always far in excess of your ability to exhaust the reserve if you are sincere of purpose and honest of heart.
 \vs p028 6:8 \pc The mercy reflectors, with their tertiary associates, engage in numerous superuniverse ministries, including the teaching of the ascending creatures. Among many other things the Significances of Origins teach these ascenders how to apply spirit ethics, and following such training, the Memories of Mercy teach them how to be truly merciful. While the spirit techniques of mercy ministry are beyond your concept, you should even now understand that mercy is a quality of growth. You should realize that there is a great reward of personal satisfaction in being first just, next fair, then patient, then kind. And then, on that foundation, if you choose and have it in your heart, you can take the next step and really show mercy; but you cannot exhibit mercy in and of itself. These steps must be traversed; otherwise there can be no genuine mercy. There may be patronage, condescension, or charity --- even pity --- but not mercy. True mercy comes only as the beautiful climax to these preceding adjuncts to group understanding, mutual appreciation, fraternal fellowship, spiritual communion, and divine harmony.\fnc{\ldots{}the \bibtextul{Significance} of Origins teach these ascenders\ldots{} \bibexpl{Same explanation as 28:6.4 above}}
-\vs p028 6:9 \ublistelem{3.}\bibnobreakspace \bibemph{The Import of Time.} Time is the one universal endowment of all will creatures; it is the “one talent” intrusted to all intelligent beings. You all have time in which to ensure your survival; and time is fatally squandered only when it is buried in neglect, when you fail so to utilize it as to make certain the survival of your soul. Failure to improve one’s time to the fullest extent possible does not impose fatal penalties; it merely retards the pilgrim of time in his journey of ascent. If survival is gained, all other losses can be retrieved.
+\vs p028 6:9 \ublistelem{3.}\bibnobreakspace \bibemph{The Import of Time.} Time is the one universal endowment of all will creatures; it is the “one talent” entrusted to all intelligent beings. You all have time in which to ensure your survival; and time is fatally squandered only when it is buried in neglect, when you fail so to utilize it as to make certain the survival of your soul. Failure to improve one’s time to the fullest extent possible does not impose fatal penalties; it merely retards the pilgrim of time in his journey of ascent. If survival is gained, all other losses can be retrieved.
 \vs p028 6:10 In the assignment of trusts the counsel of the Imports of Time is invaluable. Time is a vital factor in everything this side of Havona and Paradise. In the final judgment before the Ancients of Days, time is an element of evidence. The Imports of Time must always afford testimony to show that every defendant has had ample time for making decisions, achieving choice.
 \vs p028 6:11 These time evaluators are also the secret of prophecy; they portray the element of time which will be required in the completion of any undertaking, and they are just as dependable as indicators as are the frandalanks and chronoldeks of other living orders. The Gods foresee, hence foreknow; but the ascendant authorities of the universes of time must consult the Imports of Time to be able to forecast events of the future.
 \vs p028 6:12 You will first encounter these beings on the mansion worlds, and they will there instruct you in the advantageous use of that which you call “time,” both in its positive employment, work, and in its negative utilization, rest. Both uses of time are important.
