--- a/tex/p029.tex
+++ b/tex/p029.tex
@@ -37,7 +37,7 @@
 \vs p029 2:18 \ublistelem{6.}\bibnobreakspace \bibemph{System Centres.} One Supreme Power Centre is permanently assigned to each local system. These system centres dispatch the power circuits to the inhabited worlds of time and space. They co\hyp{}ordinate the activities of the subordinate physical controllers and otherwise function to ensure the satisfactory distribution of power in the local system. The circuit relay between the planets depends upon the perfect co\hyp{}ordination of certain material energies and upon the efficient regulation of physical power.
 \vs p029 2:19 \ublistelem{7.}\bibnobreakspace \bibemph{Unclassified Centres.} These are the centres who function in special local situations but not on the inhabited planets. The individual worlds are in the charge of Master Physical Controllers and receive the encircuited lines of power dispatched by the power centre of their system. Only those spheres of the most extraordinary energy relationships have power centres of the 7\ts{th} order acting as universe balance wheels or energy governors. In every phase of activity these power centres are the full equals of those who function on the higher units of control, but not 1 space body in 1,000,000 harbours such a living power organization.
 \usection{3.\bibnobreakspace The Domain of Power Centres}
-\vs p029 3:1 The Supreme Power Centres distributed throughout the superuniverses number, with their associates and subordinates, upward of $10^{10}$. And they are all in perfect synchrony and complete liaison with their Paradise progenitors, the Seven Supreme Power Directors. The power control of the grand universe is thus intrusted to the keeping and direction of the Seven Master Spirits, the creators of the Seven Supreme Power Directors.
+\vs p029 3:1 The Supreme Power Centres distributed throughout the superuniverses number, with their associates and subordinates, upward of $10^{10}$. And they are all in perfect synchrony and complete liaison with their Paradise progenitors, the Seven Supreme Power Directors. The power control of the grand universe is thus entrusted to the keeping and direction of the Seven Master Spirits, the creators of the Seven Supreme Power Directors.
 \vs p029 3:2 The Supreme Power Directors and all their associates, assistants, and subordinates are forever exempt from apprehension or interference by all the tribunals of all space; neither are they subject to the administrative direction either of the superuniverse government of the Ancients of Days or of the local universe administration of the Creator Sons.
 \vs p029 3:3 These power centres and directors are brought into being by the children of the Infinite Spirit. They are not germane to the administration of the Sons of God, though they affiliate with the Creator Sons during the later epochs of universe material organization. But the power centres are in some way closely associated with the cosmic overcontrol of the Supreme Being.
 \vs p029 3:4 \pc Power centres and physical controllers undergo no training; they are all created in perfection and are inherently perfect in action. Never do they pass from one function to another; always do they serve as originally assigned. There is no evolution in their ranks, and this is true of all seven divisions of both orders.
@@ -64,7 +64,7 @@
 \vs p029 4:12 \pc Not all of these orders are persons in the sense of possessing individual powers of choice. Especially do the last four seem to be wholly automatic and mechanical in response to the impulses of their superiors and in reaction to existing energy conditions. But though such response appears wholly mechanistic, it is not; they may seem to be automatons, but all of them disclose the differential function of intelligence.
 \vs p029 4:13 Personality is not necessarily a concomitant of mind. Mind can think even when deprived of all power of choice, as in numerous of the lower types of animals and in certain of these subordinate physical controllers. Many of these more automatic regulators of physical power are not persons in any sense of the term. They are not endowed with will and independence of decision, being wholly subservient to the mechanical perfection of design for the tasks of their allotment. Nonetheless all of them are highly intelligent beings.
 \vs p029 4:14 The physical controllers are chiefly occupied in the adjustment of basic energies undiscovered on Urantia. These unknown energies are very essential to the interplanetary system of transport and to certain techniques of communication. When we lay lines of energy for the purpose of conveying sound equivalents or of extending vision, these undiscovered forms of energy are utilized by the living physical controllers and their associates. These same energies are also, on occasion, used by the midway creatures in their routine work.
-\vs p029 4:15 \ublistelem{1.}\bibnobreakspace \bibemph{Associate Power Directors.} These marvellously efficient beings are intrusted with the assignment and dispatch of all orders of the Master Physical Controllers in accordance with the ever\hyp{}shifting needs of the constantly changing energy status of the realms. The vast reserves of the physical controllers are maintained on the headquarters worlds of the minor sectors, and from these concentration points they are periodically dispatched by the associate power directors to the headquarters of the universes, constellations, and systems, and to the individual planets. When thus assigned, the physical controllers are provisionally subject to the orders of the divine executioners of the conciliating commissions but are otherwise solely amenable to their associate directors and to the Supreme Power Centres.
+\vs p029 4:15 \ublistelem{1.}\bibnobreakspace \bibemph{Associate Power Directors.} These marvellously efficient beings are entrusted with the assignment and dispatch of all orders of the Master Physical Controllers in accordance with the ever\hyp{}shifting needs of the constantly changing energy status of the realms. The vast reserves of the physical controllers are maintained on the headquarters worlds of the minor sectors, and from these concentration points they are periodically dispatched by the associate power directors to the headquarters of the universes, constellations, and systems, and to the individual planets. When thus assigned, the physical controllers are provisionally subject to the orders of the divine executioners of the conciliating commissions but are otherwise solely amenable to their associate directors and to the Supreme Power Centres.
 \vs p029 4:16 3,000,000 associate power directors are assigned to each of the Orvonton minor sectors, making a total of $3 \times 10^9$ as the superuniverse quota of these amazingly versatile beings. Their own reserves are maintained on these same minor sector worlds, where they also serve as instructors of all who study the sciences of the techniques of intelligent energy control and transmutation.
 \vs p029 4:17 These directors alternate periods of executive service in the minor sectors with equal periods of inspection service to the realms of space. At least one acting inspector is always present in each local system, maintaining headquarters on its capital sphere. They keep the whole vast living energy aggregation in harmonious synchrony.
 \vs p029 4:18 \ublistelem{2.}\bibnobreakspace \bibemph{Mechanical Controllers.} These are the exceedingly versatile and mobile assistants of the associate power directors. Trillions upon trillions of them are commissioned in Ensa, your minor sector. These beings are called mechanical controllers because they are so completely dominated by their superiors, so fully subservient to the will of the associate power directors. Nevertheless they are, themselves, very intelligent, and their work, though mechanical and matter\hyp{}of\hyp{}fact in nature, is skillfully performed.
