--- a/tex/p032.tex
+++ b/tex/p032.tex
@@ -50,7 +50,7 @@
 \vs p032 4:7 The indwelling Adjusters are one of God’s separate but unified modes of contact with the creatures of his all but infinite creation. Thus does he who is invisible to mortal man manifest his presence, and could he do so, he would show himself to us in still other ways, but such further revelation is not divinely possible.
 \vs p032 4:8 We can see and understand the mechanism whereby the Sons enjoy intimate and complete knowledge regarding the universes of their jurisdiction; but we cannot fully comprehend the methods whereby God is so fully and personally conversant with the details of the universe of universes, although we at least can recognize the avenue whereby the Universal Father can receive information regarding, and manifest his presence to, the beings of his immense creation. Through the personality circuit the Father is cognizant --- has personal knowledge --- of all the thoughts and acts of all the beings in all the systems of all the universes of all creation. Though we cannot fully grasp this technique of God’s communion with his children, we can be strengthened in the assurance that the “Lord knows his children,” and that of each one of us “he takes note where we were born.”
 \vs p032 4:9 \pc In your universe and in your heart the Universal Father is present, spiritually speaking, by one of the Seven Master Spirits of central abode and, specifically, by the divine Adjuster who lives and works and waits in the depths of the mortal mind.
-\vs p032 4:10 \pc God is not a self\hyp{}centred personality; the Father freely distributes himself to his creation and to his creatures. He lives and acts, not only in the Deities, but also in his Sons, whom he intrusts with the doing of everything that it is divinely possible for them to do. The Universal Father has truly divested himself of every function which it is possible for another being to perform. And this is just as true of mortal man as of the Creator Son who rules in God’s stead at the headquarters of a local universe. Thus we behold the outworking of the ideal and infinite love of the Universal Father.
+\vs p032 4:10 \pc God is not a self\hyp{}centred personality; the Father freely distributes himself to his creation and to his creatures. He lives and acts, not only in the Deities, but also in his Sons, whom he entrusts with the doing of everything that it is divinely possible for them to do. The Universal Father has truly divested himself of every function which it is possible for another being to perform. And this is just as true of mortal man as of the Creator Son who rules in God’s stead at the headquarters of a local universe. Thus we behold the outworking of the ideal and infinite love of the Universal Father.
 \vs p032 4:11 In this universal bestowal of himself we have abundant proof of both the magnitude and the magnanimity of the Father’s divine nature. If God has withheld aught of himself from the universal creation, then of that residue he is in lavish generosity bestowing the Thought Adjusters upon the mortals of the realms, the Mystery Monitors of time, who so patiently indwell the mortal candidates for life everlasting.
 \vs p032 4:12 The Universal Father has poured out himself, as it were, to make all creation rich in personality possession and potential spiritual attainment. God has given us himself that we may be like him, and he has reserved for himself of power and glory only that which is necessary for the maintenance of those things for the love of which he has thus divested himself of all things else.
 \usection{5.\bibnobreakspace The Eternal and Divine Purpose}
