--- a/tex/p033.tex
+++ b/tex/p033.tex
@@ -1,6 +1,6 @@
 \upaper{33}{Administration of the Local Universe}
 \author{Chief of Archangels}
-\vs p033 0:1 While the Universal Father most certainly rules over his vast creation, he functions in a local universe administration through the person of the Creator Son. The Father does not otherwise personally function in the administrative affairs of a local universe. These matters are intrusted to the Creator Son and to the local universe Mother Spirit and to their manifold children. The plans, policies, and administrative acts of the local universe are formed and executed by this Son, who, in conjunction with his Spirit associate, delegates executive power to Gabriel and jurisdictional authority to the Constellation Fathers, System Sovereigns, and Planetary Princes.
+\vs p033 0:1 While the Universal Father most certainly rules over his vast creation, he functions in a local universe administration through the person of the Creator Son. The Father does not otherwise personally function in the administrative affairs of a local universe. These matters are entrusted to the Creator Son and to the local universe Mother Spirit and to their manifold children. The plans, policies, and administrative acts of the local universe are formed and executed by this Son, who, in conjunction with his Spirit associate, delegates executive power to Gabriel and jurisdictional authority to the Constellation Fathers, System Sovereigns, and Planetary Princes.
 \usection{1.\bibnobreakspace Michael of Nebadon}
 \vs p033 1:1 Our Creator Son is the personification of the 611,121\ts{st} original concept of infinite identity of simultaneous origin in the Universal Father and the Eternal Son. The Michael of Nebadon is the “only\hyp{}begotten Son” personalizing this 611,121\ts{st} universal concept of divinity and infinity. His headquarters is in the threefold mansion of light on Salvington. And this dwelling is so ordered because Michael has experienced the living of all three phases of intelligent creature existence: spiritual, morontial, and material. Because of the name associated with his seventh and final bestowal on Urantia, he is sometimes spoken of as Christ Michael.
 \vs p033 1:2 Our Creator Son is not the Eternal Son, the existential Paradise associate of the Universal Father and the Infinite Spirit. Michael of Nebadon is not a member of the Paradise Trinity. Nevertheless our Master Son possesses in his realm all of the divine attributes and powers that the Eternal Son himself would manifest were he actually to be present on Salvington and functioning in Nebadon. Michael possesses even additional power and authority, for he not only personifies the Eternal Son but also fully represents and actually embodies the personality presence of the Universal Father to and in this local universe. He even represents the Father\hyp{}Son. These relationships constitute a Creator Son the most powerful, versatile, and influential of all divine beings who are capable of direct administration of evolutionary universes and of personality contact with immature creature beings.
