--- a/tex/p035.tex
+++ b/tex/p035.tex
@@ -56,7 +56,7 @@
 \vs p035 5:2 \pc The number of Vorondadeks varies in each local universe, just 1,000,000 being the recorded number in Nebadon. These Sons, like their co\hyp{}ordinates, the Melchizedeks, possess no power of reproduction. There exists no known method whereby they can increase their numbers.
 \vs p035 5:3 \pc In many respects these Sons are a self\hyp{}governing body; as individuals and as groups, even as a whole, they are largely self\hyp{}determinative, much as are the Melchizedeks, but Vorondadeks do not function through such a wide range of activities. They do not equal their Melchizedek brethren in brilliant versatility, but they are even more reliable and efficient as rulers and farseeing administrators. Neither are they quite the administrative peers of their subordinates, the Lanonandek System Sovereigns, but they excel all orders of universe sonship in stability of purpose and in divinity of judgment.
 \vs p035 5:4 Although the decisions and rulings of this order of Sons are always in accordance with the spirit of divine sonship and in harmony with the policies of the Creator Son, they have been cited for error to the Creator Son, and in details of technique their decisions have sometimes been reversed on appeal to the superior tribunals of the universe. But these Sons rarely fall into error, and they have never gone into rebellion; never in all the history of Nebadon has a Vorondadek been found in contempt of the universe government.
-\vs p035 5:5 The service of the Vorondadeks in the local universes is extensive and varied. They serve as ambassadors to other universes and as consuls representing constellations within their native universe. Of all orders of local universe sonship they are the most often intrusted with the full delegation of sovereign powers to be exercised in critical universe situations.
+\vs p035 5:5 The service of the Vorondadeks in the local universes is extensive and varied. They serve as ambassadors to other universes and as consuls representing constellations within their native universe. Of all orders of local universe sonship they are the most often entrusted with the full delegation of sovereign powers to be exercised in critical universe situations.
 \vs p035 5:6 On those worlds segregated in spiritual darkness, those spheres which have, through rebellion and default, suffered planetary isolation, an observer Vorondadek is usually present pending the restoration of normal status. In certain emergencies this Most High observer could exercise absolute and arbitrary authority over every celestial being assigned to that planet. It is of record on Salvington that the Vorondadeks have sometimes exercised such authority as Most High regents of such planets. And this has also been true even of inhabited worlds that were untouched by rebellion.
 \vs p035 5:7 Often a corps of 12 or more Vorondadek Sons sits en banc\fnst{\textbf{en banc}, As a group, particularly with respect to a legal decision rendered by all of the judges sitting on a court, rather than by a smaller panel of judges from that court.} as a high court of review and appeal concerning special cases involving the status of a planet or a system. But their work more largely pertains to the legislative functions indigenous to the constellation governments. As a result of all these services, the Vorondadek Sons have become the historians of the local universes; they are personally familiar with all the political struggles and the social upheavals of the inhabited worlds.
 \usection{6.\bibnobreakspace The Constellation Fathers}
