--- a/tex/p036.tex
+++ b/tex/p036.tex
@@ -1,11 +1,11 @@
 \upaper{36}{The Life Carriers}
 \author{Vorondadek Son}
-\vs p036 0:1 Life does not originate spontaneously. Life is constructed according to plans formulated by the (unrevealed) Architects of Being and appears on the inhabited planets either by direct importation or as a result of the operations of the Life Carriers of the local universes. These carriers of life are among the most interesting and versatile of the diverse family of universe Sons. They are intrusted with designing and carrying creature life to the planetary spheres. And after planting this life on such new worlds, they remain there for long periods to foster its development.
+\vs p036 0:1 Life does not originate spontaneously. Life is constructed according to plans formulated by the (unrevealed) Architects of Being and appears on the inhabited planets either by direct importation or as a result of the operations of the Life Carriers of the local universes. These carriers of life are among the most interesting and versatile of the diverse family of universe Sons. They are entrusted with designing and carrying creature life to the planetary spheres. And after planting this life on such new worlds, they remain there for long periods to foster its development.
 \usection{1.\bibnobreakspace Origin and Nature of Life Carriers}
-\vs p036 1:1 Though the Life Carriers belong to the family of divine sonship, they are a peculiar and distinct type of universe Sons, being the only group of intelligent life in a local universe in whose creation the rulers of a superuniverse participate. The Life Carriers are the offspring of three pre\hyp{}existent personalities: the Creator Son, the Universe Mother Spirit, and, by designation, one of the three Ancients of Days presiding over the destinies of the superuniverse concerned. These Ancients of Days, who alone can decree the extinction of intelligent life, participate in the creation of the Life Carriers, who are intrusted with establishing physical life on the evolving worlds.
+\vs p036 1:1 Though the Life Carriers belong to the family of divine sonship, they are a peculiar and distinct type of universe Sons, being the only group of intelligent life in a local universe in whose creation the rulers of a superuniverse participate. The Life Carriers are the offspring of three pre\hyp{}existent personalities: the Creator Son, the Universe Mother Spirit, and, by designation, one of the three Ancients of Days presiding over the destinies of the superuniverse concerned. These Ancients of Days, who alone can decree the extinction of intelligent life, participate in the creation of the Life Carriers, who are entrusted with establishing physical life on the evolving worlds.
 \vs p036 1:2 In the universe of Nebadon we have on record the creation of 100,000,000 Life Carriers. This efficient corps of life disseminators is not a truly self\hyp{}governing group. They are directed by the life\hyp{}determining trio, consisting of Gabriel, the Father Melchizedek, and Nambia, the original and first\hyp{}born Life Carrier of Nebadon. But in all phases of their divisional administration they are self\hyp{}governing.
 \vs p036 1:3 Life Carriers are graded into three grand divisions: The first division is the senior Life Carriers, the second, assistants, and the third, custodians. The primary division is subdivided into 12 groups of specialists in the various forms of life manifestation. The segregation of these three divisions was effected by the Melchizedeks, who conducted tests for such purposes on the Life Carriers’ headquarters sphere. The Melchizedeks have ever since been closely associated with the Life Carriers and always accompany them when they go forth to establish life on a new planet.
-\vs p036 1:4 When an evolutionary planet is finally settled in light and life, the Life Carriers are organized into the higher deliberative bodies of advisory capacity to assist in the further administration and development of the world and its glorified beings. In the later and settled ages of an evolving universe these Life Carriers are intrusted with many new duties.
+\vs p036 1:4 When an evolutionary planet is finally settled in light and life, the Life Carriers are organized into the higher deliberative bodies of advisory capacity to assist in the further administration and development of the world and its glorified beings. In the later and settled ages of an evolving universe these Life Carriers are entrusted with many new duties.
 \usection{2.\bibnobreakspace The Life Carrier Worlds}
 \vs p036 2:1 The Melchizedeks have the general oversight of the 4\ts{th} group of 7 primary spheres in the Salvington circuit. These worlds of the Life Carriers are designated as follows:
 \vs p036 2:2 \ublistelem{1.}\bibnobreakspace The Life Carrier headquarters.
@@ -18,7 +18,7 @@
 \vs p036 2:9 \pc Each of these primary spheres is surrounded by six satellites, on which the special phases of all the Life Carrier activities in the universe are centred.
 \vs p036 2:10 \pc \bibemph{World Number One,} the headquarters sphere, together with its 6 tributary satellites, is devoted to the study of universal life, life in all of its known phases of manifestation. Here is located the college of life planning, wherein function teachers and advisers from Uversa and Havona, even from Paradise. And I am permitted to reveal that the 7 central emplacements of the adjutant mind\hyp{}spirits are situated on this world of the Life Carriers.
 \vs p036 2:11 The number 10 --- the decimal system --- is inherent in the physical universe but not in the spiritual. The domain of life is characterized by 3, 7, and 12 or by multiples and combinations of these basic numbers. There are three primal and essentially different life plans, after the order of the three Paradise Sources and Centres, and in the universe of Nebadon these three basic forms of life are segregated on three different types of planets. There were, originally, 12 distinct and divine concepts of transmissible life. This number 12, with its subdivisions and multiples, runs throughout all basic life patterns of all 7 superuniverses. There are also 7 architectural types of life design, fundamental arrangements of the reproducing configurations of living matter. The Orvonton life patterns are configured as 12 inheritance carriers. The differing orders of will creatures are configured as 12, 24, 48, 96, 192, 384, and 768. On Urantia there are 48\fnst{\textbf{48}, These ``trait determiners'' and ``chromosomes'' are not the same thing, because the number of chromosomes in a single human sex cell is 23, not 48. There are 24 different chromosomes in human cells: 22 autosomes, the X, and the Y. Each chromosome contains a single DNA molecule, which represents 2 trait determiners. Therefore, there are really 48 ($24 \times 2$) trait determiners in sex cells, despite the fact that no single sex cell contains all 48.} units of pattern control --- trait determiners --- in the sex cells of human reproduction.
-\vs p036 2:12 \pc \bibemph{The Second World} is the life\hyp{}designing sphere; here all new modes of life organization are worked out. While the original life designs are provided by the Creator Son, the actual outworking of these plans is intrusted to the Life Carriers and their associates. When the general life plans for a new world have been formulated, they are transmitted to the headquarters sphere, where they are minutely scrutinized by the supreme council of the senior Life Carriers in collaboration with a corps of consulting Melchizedeks. If the plans are a departure from previously accepted formulas, they must be passed upon, and endorsed by, the Creator Son. The chief of Melchizedeks often represents the Creator Son in these deliberations.
+\vs p036 2:12 \pc \bibemph{The Second World} is the life\hyp{}designing sphere; here all new modes of life organization are worked out. While the original life designs are provided by the Creator Son, the actual outworking of these plans is entrusted to the Life Carriers and their associates. When the general life plans for a new world have been formulated, they are transmitted to the headquarters sphere, where they are minutely scrutinized by the supreme council of the senior Life Carriers in collaboration with a corps of consulting Melchizedeks. If the plans are a departure from previously accepted formulas, they must be passed upon, and endorsed by, the Creator Son. The chief of Melchizedeks often represents the Creator Son in these deliberations.
 \vs p036 2:13 Planetary life, therefore, while similar in some respects, differs in many ways on each evolutionary world. Even in a uniform life series in a single family of worlds, life is not exactly the same on any two planets; there is always a planetary type, for the Life Carriers work constantly in an effort to improve the vital formulas committed to their keeping.
 \vs p036 2:14 There are over 1,000,000 fundamental or cosmic chemical formulas which constitute the parent patterns and the numerous basic functional variations of life manifestations. Satellite number one of the life\hyp{}planning sphere is the realm of the universe physicists and electrochemists who serve as technical assistants to the Life Carriers in the work of capturing, organizing, and manipulating the essential units of energy which are employed in building up the material vehicles of life transmission, the so\hyp{}called germ plasm.
 \vs p036 2:15 The planetary life\hyp{}planning laboratories are situated on the second satellite of this world number two. In these laboratories the Life Carriers and all their associates collaborate with the Melchizedeks in the effort to modify and possibly improve the life designed for implantation on the \bibemph{decimal planets} of Nebadon. The life now evolving on Urantia was planned and partially worked out on this very world, for Urantia is a decimal planet, a life\hyp{}experiment world. On 1 world in each 10 a greater variance in the standard life designs is permitted than on the other (nonexperimental) worlds.
