--- a/tex/p039.tex
+++ b/tex/p039.tex
@@ -36,7 +36,7 @@
 \vs p039 2:3 \ublistelem{1.}\bibnobreakspace \bibemph{The Intelligence Corps.} These seraphim belong to the personal staff of Gabriel, the Bright and Morning Star. They range the local universe gathering the information of the realms for his guidance in the councils of Nebadon. They are the intelligence corps of the mighty hosts over which Gabriel presides as vicegerent of the Master Son. These seraphim are not directly affiliated with either the systems or the constellations, and their information pours in direct to Salvington upon a continuous, direct, and independent circuit.
 \vs p039 2:4 The intelligence corps of the various local universes can and do intercommunicate but only within a given superuniverse. There is a differential of energy which effectively segregates the business and transactions of the various supergovernments. One superuniverse can ordinarily communicate with another superuniverse only through the provisions and facilities of the Paradise clearinghouse.
 \vs p039 2:5 \ublistelem{2.}\bibnobreakspace \bibemph{The Voice of Mercy.} Mercy is the keynote of seraphic service and angelic ministry. It is therefore fitting that there should be a corps of angels who, in a special manner, portray mercy. These seraphim are the real mercy ministers of the local universes. They are the inspired leaders who foster the higher impulses and holier emotions of men and angels. The directors of these legions are now always completion seraphim who are also graduate guardians of mortal destiny; that is, each angelic pair has guided at least one soul of animal origin during the life in the flesh and has subsequently traversed the circles of Seraphington and has been mustered into the Seraphic Corps of Completion.
-\vs p039 2:6 \ublistelem{3.}\bibnobreakspace \bibemph{Spirit Co\hyp{}ordinators.} The third group of superior seraphim are based on Salvington but function in the local universe anywhere they can be of fruitful service. While their tasks are essentially spiritual and therefore beyond the real understanding of human minds, you will perhaps grasp something of their ministry to mortals if it is explained that these angels are intrusted with the task of preparing the ascendant sojourners on Salvington for their last transition in the local universe --- from the highest morontia level to the status of newborn spirit beings. As the mind planners on the mansion worlds help the surviving creature to adjust to, and make effective use of, the potentials of morontia mind, so do these seraphim instruct the morontia graduates on Salvington regarding the newly attained capacities of the mind of the spirit. And they serve the ascendant mortals in many other ways.
+\vs p039 2:6 \ublistelem{3.}\bibnobreakspace \bibemph{Spirit Co\hyp{}ordinators.} The third group of superior seraphim are based on Salvington but function in the local universe anywhere they can be of fruitful service. While their tasks are essentially spiritual and therefore beyond the real understanding of human minds, you will perhaps grasp something of their ministry to mortals if it is explained that these angels are entrusted with the task of preparing the ascendant sojourners on Salvington for their last transition in the local universe --- from the highest morontia level to the status of newborn spirit beings. As the mind planners on the mansion worlds help the surviving creature to adjust to, and make effective use of, the potentials of morontia mind, so do these seraphim instruct the morontia graduates on Salvington regarding the newly attained capacities of the mind of the spirit. And they serve the ascendant mortals in many other ways.
 \vs p039 2:7 \ublistelem{4.}\bibnobreakspace \bibemph{Assistant Teachers.} The assistant teachers are the helpers and associates of their fellow seraphim, the teaching counsellors. They are also individually connected with the extensive educational enterprises of the local universe, especially with the sevenfold scheme of training operative on the mansion worlds of the local systems. A marvellous corps of this order of seraphim functions on Urantia for the purpose of fostering and furthering the cause of truth and righteousness.
 \vs p039 2:8 \ublistelem{5.}\bibnobreakspace \bibemph{The Transporters.} All groups of ministering spirits have their transport corps, angelic orders dedicated to the ministry of transporting those personalities who are unable, of themselves, to journey from one sphere to another. The fifth group of the superior seraphim are headquartered on Salvington and serve as space traversers to and from the headquarters of the local universe. Like other subdivisions of the superior seraphim, some were created as such while others have risen from the lower or less endowed groups.
 \vs p039 2:9 \pc The “energy range” of seraphim is wholly adequate for local universe and even for superuniverse requirements, but they could never withstand the energy demands entailed by such a long journey as that from Uversa to Havona. Such an exhaustive journey requires the special powers of a primary seconaphim of transport endowments. Transporters take on energy for flight while in transit and recuperate personal power at the end of the journey.
@@ -47,7 +47,7 @@
 \vs p039 2:14 \ublistelem{6.}\bibnobreakspace \bibemph{The Recorders.} These personalities are especially concerned with the reception, filing, and redispatch of the records of Salvington and its associated worlds. They also serve as special recorders for resident groups of superuniverse and higher personalities and as clerks of the courts of Salvington and secretaries to the rulers thereof.
 \vs p039 2:15 \pc \bibemph{Broadcasters ---} receivers and dispatchers --- are a specialized subdivision of the seraphic recorders, being concerned with the dispatch of records and with the dissemination of essential information. Their work is of a high order, being so multicircuited that 144,000 messages can simultaneously traverse the same lines of energy. They adapt the higher ideographic techniques of the superaphic chief recorders and with these common symbols maintain reciprocal contact with both the intelligence co\hyp{}ordinators of the tertiary supernaphim and the glorified intelligence co\hyp{}ordinators of the Seraphic Corps of Completion.
 \vs p039 2:16 Seraphic recorders of the superior order thus effect a close liaison with the intelligence corps of their own order and with all subordinate recorders, while the broadcasts enable them to maintain constant communication with the higher recorders of the superuniverse and, through this channel, with the recorders of Havona and the custodians of knowledge on Paradise. Many of the superior order of recorders are seraphim ascended from similar duties in lower sections of the universe.
-\vs p039 2:17 \ublistelem{7.}\bibnobreakspace \bibemph{The Reserves.} Large reserves of all types of the superior seraphim are held on Salvington, instantly available for dispatch to the farthermost worlds of Nebadon as they are requisitioned by the directors of assignment or upon the request of the universe administrators. The reserves of superior seraphim also furnish messenger aids upon requisition by the chief of the Brilliant Evening Stars, who is intrusted with the custody and dispatch of all personal communications. A local universe is fully provided with adequate means of intercommunication, but there is always a residue of messages which requires dispatch by personal messengers.
+\vs p039 2:17 \ublistelem{7.}\bibnobreakspace \bibemph{The Reserves.} Large reserves of all types of the superior seraphim are held on Salvington, instantly available for dispatch to the farthermost worlds of Nebadon as they are requisitioned by the directors of assignment or upon the request of the universe administrators. The reserves of superior seraphim also furnish messenger aids upon requisition by the chief of the Brilliant Evening Stars, who is entrusted with the custody and dispatch of all personal communications. A local universe is fully provided with adequate means of intercommunication, but there is always a residue of messages which requires dispatch by personal messengers.
 \vs p039 2:18 \pc The basic reserves for the entire local universe are held on the seraphic worlds of Salvington. This corps includes all types of all groups of angels.
 \usection{3.\bibnobreakspace Supervisor Seraphim}
 \vs p039 3:1 This versatile order of universe angels is assigned to the exclusive service of the constellations. These able ministers make their headquarters on the constellation capitals but function throughout all Nebadon in the interests of their assigned realms.
