--- a/tex/p043.tex
+++ b/tex/p043.tex
@@ -54,7 +54,7 @@
 \vs p043 5:6 \ublistelem{4.}\bibnobreakspace The Most High adviser, the personal representative of Michael since his attainment of the status of a Master Son.
 \vs p043 5:7 \ublistelem{5.}\bibnobreakspace The Most High executive, the personal representative of Gabriel stationed on Edentia ever since the Lucifer rebellion.
 \vs p043 5:8 \ublistelem{6.}\bibnobreakspace The Most High chief of planetary observers, the director of the Vorondadek observers stationed on the isolated worlds of Satania.
-\vs p043 5:9 \ublistelem{7.}\bibnobreakspace The Most High referee, the Vorondadek Son intrusted with the duty of adjusting all difficulties consequential to rebellion within the constellation.
+\vs p043 5:9 \ublistelem{7.}\bibnobreakspace The Most High referee, the Vorondadek Son entrusted with the duty of adjusting all difficulties consequential to rebellion within the constellation.
 \vs p043 5:10 \ublistelem{8.}\bibnobreakspace The Most High emergency administrator, the Vorondadek Son charged with the task of adapting the emergency enactments of the Norlatiadek legislature to the rebellion\hyp{}isolated worlds of Satania.
 \vs p043 5:11 \ublistelem{9.}\bibnobreakspace The Most High mediator, the Vorondadek Son assigned to harmonize the special bestowal adjustments on Urantia with the routine administration of the constellation. The presence of certain archangel activities and numerous other irregular ministrations on Urantia, together with the special activities of the Brilliant Evening Stars on Jerusem, necessitates the functioning of this Son.
 \vs p043 5:12 \ublistelem{10.}\bibnobreakspace The Most High judge\hyp{}advocate, the head of the emergency tribunal devoted to the adjustment of the special problems of Norlatiadek growing out of the confusion consequent upon the Satania rebellion.
