--- a/tex/p045.tex
+++ b/tex/p045.tex
@@ -16,7 +16,7 @@
 \vs p045 1:10 The 7 satellites surrounding the Father’s world are variously utilized in the different systems. In Satania they are now used as the detention spheres for the interned groups of the Lucifer rebellion. The constellation capital, Edentia, has no analogous prison worlds; the few seraphim and cherubim who went over to the rebels in the Satania rebellion have been long since confined on these isolation worlds of Jerusem.
 \vs p045 1:11 As a sojourner on the 7\ts{th} mansion world, you have access to the 7\ts{th} transition world, the sphere of the Universal Father, and are also permitted to visit the Satania prison worlds surrounding this planet, whereon are now confined Lucifer and the majority of those personalities who followed him in rebellion against Michael. And this sad spectacle has been observable during these recent ages and will continue to serve as a solemn warning to all Nebadon until the Ancients of Days shall adjudicate the sin of Lucifer and his fallen associates who rejected the salvation proffered by Michael, their universe Father.
 \usection{2.\bibnobreakspace The System Sovereign}
-\vs p045 2:1 The chief executive of a local system of inhabited worlds is a primary Lanonandek Son, the System Sovereign. In our local universe these sovereigns are intrusted with large executive responsibilities, unusual personal prerogatives. Not all universes, even in Orvonton, are so organized as to permit the System Sovereigns to exercise such unusually wide powers of personal discretion in the direction of system affairs. But in all the history of Nebadon these untrammelled executives have exhibited disloyalty only three times. The Lucifer rebellion in the system of Satania was the last and the most widespread of all.
+\vs p045 2:1 The chief executive of a local system of inhabited worlds is a primary Lanonandek Son, the System Sovereign. In our local universe these sovereigns are entrusted with large executive responsibilities, unusual personal prerogatives. Not all universes, even in Orvonton, are so organized as to permit the System Sovereigns to exercise such unusually wide powers of personal discretion in the direction of system affairs. But in all the history of Nebadon these untrammelled executives have exhibited disloyalty only three times. The Lucifer rebellion in the system of Satania was the last and the most widespread of all.
 \vs p045 2:2 In Satania, even after this disastrous upheaval, absolutely no changes have been made in the technique of system administration. The present System Sovereign possesses all the power and exercises all the authority that were invested in his unworthy predecessor except for certain matters now under the supervision of the Constellation Fathers which the Ancients of Days have not yet fully restored to Lanaforge, the successor of Lucifer.
 \vs p045 2:3 \pc The present head of Satania is a gracious and brilliant ruler, and he is a rebellion\hyp{}tested sovereign. When serving as an assistant System Sovereign, Lanaforge was faithful to Michael in an earlier upheaval in the universe of Nebadon. This mighty and brilliant Lord of Satania is a tried and tested administrator. At the time of the second system rebellion in Nebadon, when the System Sovereign stumbled and fell into darkness, Lanaforge, the first assistant to the erring chief, seized the reins of government and so conducted the affairs of the system that comparatively few personalities were lost either on the headquarters worlds or on the inhabited planets of that unfortunate system. Lanaforge bears the distinction of being the only primary Lanonandek Son in all Nebadon who thus functioned loyally in the service of Michael and in the very presence of the default of his brother of superior authority and antecedent rank. Lanaforge will probably not be removed from Jerusem until all the results of the former folly have been overcome and the products of rebellion removed from Satania.\tunemarkup{pictures}{\begin{figure}[H]\centering\includegraphics[scale=\tunemarkup{pgkobomini}{0.35}\tunemarkup{pgkoboaurahd}{0.4}\tunemarkup{pghanlin}{0.35}\tunemarkup{pgnexus7}{0.35}\tunemarkup{pgkindledx}{0.27}]{../urantia-pictures/Troy-Bishop/lanaforge_700x525h.jpg}\caption{Lanaforge by Troy~R.~Bishop}\end{figure}}
 \vs p045 2:4 \pc While all the affairs of the isolated worlds of Satania have not been returned to his jurisdiction, Lanaforge discloses great interest in their welfare, and he is a frequent visitor on Urantia. As in other and normal systems, the Sovereign presides over the system council of world rulers, the Planetary Princes and the resident governors general of the isolated worlds. This planetary council assembles from time to time on the headquarters of the system --- “When the Sons of God come together.”
