--- a/tex/p047.tex
+++ b/tex/p047.tex
@@ -23,7 +23,7 @@
 \usection{3.\bibnobreakspace The First Mansion World}
 \vs p047 3:1 On the mansion worlds the resurrected mortal survivors resume their lives just where they left off when overtaken by death. When you go from Urantia to the first mansion world, you will notice considerable change, but if you had come from a more normal and progressive sphere of time, you would hardly notice the difference except for the fact that you were in possession of a different body; the tabernacle of flesh and blood has been left behind on the world of nativity.
 \vs p047 3:2 The very centre of all activities on the first mansion world is the resurrection hall, the enormous temple of personality assembly. This gigantic structure consists of the central rendezvous of the seraphic destiny guardians, the Thought Adjusters, and the archangels of the resurrection. The Life Carriers also function with these celestial beings in the resurrection of the dead.
-\vs p047 3:3 The mortal\hyp{}mind transcripts and the active creature\hyp{}memory patterns as transformed from the material levels to the spiritual are the individual possession of the detached Thought Adjusters; these spiritized factors of mind, memory, and creature personality are forever a part of such Adjusters. The creature mind\hyp{}matrix and the passive potentials of identity are present in the morontia soul intrusted to the keeping of the seraphic destiny guardians. And it is the reuniting of the morontia\hyp{}soul trust of the seraphim and the spirit\hyp{}mind trust of the Adjuster that reassembles creature personality and constitutes resurrection of a sleeping survivor.
+\vs p047 3:3 The mortal\hyp{}mind transcripts and the active creature\hyp{}memory patterns as transformed from the material levels to the spiritual are the individual possession of the detached Thought Adjusters; these spiritized factors of mind, memory, and creature personality are forever a part of such Adjusters. The creature mind\hyp{}matrix and the passive potentials of identity are present in the morontia soul entrusted to the keeping of the seraphic destiny guardians. And it is the reuniting of the morontia\hyp{}soul trust of the seraphim and the spirit\hyp{}mind trust of the Adjuster that reassembles creature personality and constitutes resurrection of a sleeping survivor.
 \vs p047 3:4 If a transitory personality of mortal origin should never be thus reassembled, the spirit elements of the nonsurviving mortal creature would forever continue as an integral part of the individual experiential endowment of the onetime indwelling Adjuster.
 \vs p047 3:5 From the Temple of New Life there extend 7 radial wings, the resurrection halls of the mortal races. Each of these structures is devoted to the assembly of one of the 7 races of time. There are 100,000 personal resurrection chambers in each of these 7 wings terminating in the circular class assembly halls, which serve as the awakening chambers for as many as 1,000,000 individuals. These halls are surrounded by the personality assembly chambers of the blended races of the normal post\hyp{}Adamic worlds. Regardless of the technique which may be employed on the individual worlds of time in connection with special or dispensational resurrections, the real and conscious reassembly of actual and complete personality takes place in the resurrection halls of mansonia number one. Throughout all eternity you will recall the profound memory impressions of your first witnessing of these resurrection mornings.
 \vs p047 3:6 \pc From the resurrection halls you proceed to the Melchizedek sector, where you are assigned permanent residence. Then you enter upon ten days of personal liberty. You are free to explore the immediate vicinity of your new home and to familiarize yourself with the program which lies immediately ahead. You also have time to gratify your desire to consult the registry and call upon your loved ones and other earth friends who may have preceded you to these worlds. At the end of your ten\hyp{}day period of leisure you begin the second step in the Paradise journey, for the mansion worlds are actual training spheres, not merely detention planets.
