--- a/tex/p050.tex
+++ b/tex/p050.tex
@@ -55,7 +55,7 @@
 \vs p050 6:4 Culture presupposes quality of mind; culture cannot be enhanced unless mind is elevated. Superior intellect will seek a noble culture and find some way to attain such a goal. Inferior minds will spurn the highest culture even when presented to them ready\hyp{}made. Much depends, also, upon the successive missions of the divine Sons and upon the extent to which enlightenment is received by the ages of their respective dispensations.
 \vs p050 6:5 \pc You should not forget that for 200,000 years all the worlds of Satania have rested under the spiritual ban of Norlatiadek in consequence of the Lucifer rebellion. And it will require age upon age to retrieve the resultant handicaps of sin and secession. Your world still continues to pursue an irregular and checkered career as a result of the double tragedy of a rebellious Planetary Prince and a defaulting Material Son. Even the bestowal of Christ Michael on Urantia did not immediately set aside the temporal consequences of these serious blunders in the earlier administration of the world.
 \usection{7.\bibnobreakspace The Rewards of Isolation}
-\vs p050 7:1 On first thought it might appear that Urantia and its associated isolated worlds are most unfortunate in being deprived of the beneficent presence and influence of such superhuman personalities as a Planetary Prince and a Material Son and Daughter. But isolation of these spheres affords their races a unique opportunity for the exercise of faith and for the development of a peculiar quality of confidence in cosmic reliability which is not dependent on sight or any other material consideration. It may turn out, eventually, that mortal creatures hailing from the worlds quarantined in consequence of rebellion are extremely fortunate. We have discovered that such ascenders are very early intrusted with numerous special assignments to cosmic undertakings where unquestioned faith and sublime confidence are essential to achievement.
+\vs p050 7:1 On first thought it might appear that Urantia and its associated isolated worlds are most unfortunate in being deprived of the beneficent presence and influence of such superhuman personalities as a Planetary Prince and a Material Son and Daughter. But isolation of these spheres affords their races a unique opportunity for the exercise of faith and for the development of a peculiar quality of confidence in cosmic reliability which is not dependent on sight or any other material consideration. It may turn out, eventually, that mortal creatures hailing from the worlds quarantined in consequence of rebellion are extremely fortunate. We have discovered that such ascenders are very early entrusted with numerous special assignments to cosmic undertakings where unquestioned faith and sublime confidence are essential to achievement.
 \vs p050 7:2 On Jerusem the ascenders from these isolated worlds occupy a residential sector by themselves and are known as the \bibemph{agondonters,} meaning evolutionary will creatures who can believe without seeing, persevere when isolated, and triumph over insuperable difficulties even when alone. This functional grouping of the agondonters persists throughout the ascension of the local universe and the traversal of the superuniverse; it disappears during the sojourn in Havona but promptly reappears upon the attainment of Paradise and definitely persists in the Corps of the Mortal Finality. Tabamantia is an \bibemph{agondonter} of finaliter status, having survived from one of the quarantined spheres involved in the first rebellion ever to take place in the universes of time and space.
 \vs p050 7:3 All through the Paradise career, reward follows effort as the result of causes. Such rewards set off the individual from the average, provide a differential of creature experience, and contribute to the versatility of ultimate performances in the collective body of the finaliters.
 \vsetoff
