--- a/tex/p066.tex
+++ b/tex/p066.tex
@@ -72,15 +72,15 @@
 \vs p066 5:25 These primitive men would not consent to experiment with steam power, notwithstanding the repeated urgings of their teachers; never could they overcome their great fear of the explosive power of confined steam. They were, however, finally persuaded to work with metals and fire, although a piece of red\hyp{}hot metal was a terrorizing object to early man.
 \vs p066 5:26 Mek did a great deal to advance the culture of the Andonites and to improve the art of the blue man. A blend of the blue man with the Andon stock produced an artistically gifted type, and many of them became master sculptors. They did not work in stone or marble, but their works of clay, hardened by baking, adorned the gardens of Dalamatia.
 \vs p066 5:27 Great progress was made in the home arts, most of which were lost in the long and dark ages of rebellion, never to be rediscovered until modern times.
-\vs p066 5:28 \ublistelem{9.}\bibnobreakspace \bibemph{The governors of advanced tribal relations.} This was the group intrusted with the work of bringing human society up to the level of statehood. Their chief was Tut.
+\vs p066 5:28 \ublistelem{9.}\bibnobreakspace \bibemph{The governors of advanced tribal relations.} This was the group entrusted with the work of bringing human society up to the level of statehood. Their chief was Tut.
 \vs p066 5:29 These leaders contributed much to bringing about intertribal marriages. They fostered courtship and marriage after due deliberation and full opportunity to become acquainted. The purely military war dances were refined and made to serve valuable social ends. Many competitive games were introduced, but these ancient folk were a serious people; little humour graced these early tribes. Few of these practices survived the subsequent disintegration of planetary insurrection.
 \vs p066 5:30 Tut and his associates laboured to promote group associations of a peaceful nature, to regulate and humanize warfare, to co\hyp{}ordinate intertribal relations, and to improve tribal governments. In the vicinity of Dalamatia there developed a more advanced culture, and these improved social relations were very helpful in influencing more remote tribes. But the pattern of civilization prevailing at the Prince’s headquarters was quite different from the barbaric society evolving elsewhere, just as the XX century society of Capetown, South Africa, is totally unlike the crude culture of the diminutive Bushmen to the north.
-\vs p066 5:31 \ublistelem{10.}\bibnobreakspace \bibemph{The supreme court of tribal co\hyp{}ordination and racial co\hyp{}operation.} This supreme council was directed by Van and was the court of appeals for all of the other nine special commissions charged with the supervision of human affairs. This council was one of wide function, being intrusted with all matters of earthly concern which were not specifically assigned to the other groups. This selected corps had been approved by the Constellation Fathers of Edentia before they were authorized to assume the functions of the supreme court of Urantia.
+\vs p066 5:31 \ublistelem{10.}\bibnobreakspace \bibemph{The supreme court of tribal co\hyp{}ordination and racial co\hyp{}operation.} This supreme council was directed by Van and was the court of appeals for all of the other nine special commissions charged with the supervision of human affairs. This council was one of wide function, being entrusted with all matters of earthly concern which were not specifically assigned to the other groups. This selected corps had been approved by the Constellation Fathers of Edentia before they were authorized to assume the functions of the supreme court of Urantia.
 \usection{6.\bibnobreakspace The Prince’s Reign}
 \vs p066 6:1 The degree of a world’s culture is measured by the social heritage of its native beings, and the rate of cultural expansion is wholly determined by the ability of its inhabitants to comprehend new and advanced ideas.
 \vs p066 6:2 Slavery to tradition produces stability and co\hyp{}operation by sentimentally linking the past with the present, but it likewise stifles initiative and enslaves the creative powers of the personality. The whole world was caught in the stalemate of tradition\hyp{}bound mores when the Caligastia 100 arrived and began the proclamation of the new gospel of individual initiative within the social groups of that day. But this beneficent rule was so soon interrupted that the races never have been wholly liberated from the slavery of custom; fashion still unduly dominates Urantia.
 \vs p066 6:3 The Caligastia 100 --- graduates of the Satania mansion worlds --- well knew the arts and culture of Jerusem, but such knowledge is nearly valueless on a barbaric planet populated by primitive humans. These wise beings knew better than to undertake the \bibemph{sudden} transformation, or the en masse uplifting, of the primitive races of that day. They well understood the slow evolution of the human species, and they wisely refrained from any radical attempts at modifying man’s mode of life on earth.
-\vs p066 6:4 Each of the ten planetary commissions set about \bibemph{slowly} and naturally to advance the interests intrusted to them. Their plan consisted in attracting the best minds of the surrounding tribes and, after training them, sending them back to their people as emissaries of social uplift.
+\vs p066 6:4 Each of the ten planetary commissions set about \bibemph{slowly} and naturally to advance the interests entrusted to them. Their plan consisted in attracting the best minds of the surrounding tribes and, after training them, sending them back to their people as emissaries of social uplift.
 \vs p066 6:5 Foreign emissaries were never sent to a race except upon the specific request of that people. Those who laboured for the uplift and advancement of a given tribe or race were always natives of that tribe or race. The 100 would not attempt to impose the habits and mores of even a superior race upon another tribe. Always they patiently worked to uplift and advance the time\hyp{}tried mores of each race. The simple folk of Urantia brought their social customs to Dalamatia, not to exchange them for new and better practices, but to have them uplifted by contact with a higher culture and by association with superior minds. The process was slow but very effectual.
 \vs p066 6:6 The Dalamatia teachers sought to add conscious social selection to the purely natural selection of biologic evolution. They did not derange human society, but they did markedly accelerate its normal and natural evolution. Their motive was progression by evolution and not revolution by revelation. The human race had spent ages in acquiring the little religion and morals it had, and these supermen knew better than to rob mankind of these few advances by the confusion and dismay which always result when enlightened and superior beings undertake to uplift the backward races by overteaching and overenlightenment.
 \vs p066 6:7 When Christian missionaries go into the heart of Africa, where sons and daughters are supposed to remain under the control and direction of their parents throughout the lifetime of the parents, they only bring about confusion and the breakdown of all authority when they seek, in a single generation, to supplant this practice by teaching that these children should be free from all parental restraint after they have attained the age of 21.
