--- a/tex/p070.tex
+++ b/tex/p070.tex
@@ -96,7 +96,7 @@
 \vs p070 7:5 \ublistelem{3.}\bibnobreakspace For the purpose of preserving valuable “spirit” or trade secrets.
 \vs p070 7:6 \ublistelem{4.}\bibnobreakspace For the enjoyment of some special charm or magic.
 \vs p070 7:7 \pc The very secrecy of these societies conferred on all members the power of mystery over the rest of the tribe. Secrecy also appeals to vanity; the initiates were the social aristocracy of their day. After initiation the boys hunted with the men; whereas before they had gathered vegetables with the women. And it was the supreme humiliation, a tribal disgrace, to fail to pass the puberty tests and thus be compelled to remain outside the men’s abode with the women and children, to be considered effeminate. Besides, noninitiates were not allowed to marry.
-\vs p070 7:8 \pc Primitive people very early taught their adolescent youths sex control. It became the custom to take boys away from parents from puberty to marriage, their education and training being intrusted to the men’s secret societies. And one of the chief functions of these clubs was to keep control of adolescent young men, thus preventing illegitimate children.
+\vs p070 7:8 \pc Primitive people very early taught their adolescent youths sex control. It became the custom to take boys away from parents from puberty to marriage, their education and training being entrusted to the men’s secret societies. And one of the chief functions of these clubs was to keep control of adolescent young men, thus preventing illegitimate children.
 \vs p070 7:9 Commercialized prostitution began when these men’s clubs paid money for the use of women from other tribes. But the earlier groups were remarkably free from sex laxity.
 \vs p070 7:10 The puberty initiation ceremony usually extended over a period of five years. Much self\hyp{}torture and painful cutting entered into these ceremonies. Circumcision was first practised as a rite of initiation into one of these secret fraternities. The tribal marks were cut on the body as a part of the puberty initiation; the tattoo originated as such a badge of membership. Such torture, together with much privation, was designed to harden these youths, to impress them with the reality of life and its inevitable hardships. This purpose is better accomplished by the later appearing athletic games and physical contests.
 \vs p070 7:11 But the secret societies did aim at the improvement of adolescent morals; one of the chief purposes of the puberty ceremonies was to impress upon the boy that he must leave other men’s wives alone.
