--- a/tex/p076.tex
+++ b/tex/p076.tex
@@ -10,7 +10,7 @@
 \usection{2.\bibnobreakspace Cain and Abel}
 \vs p076 2:1 Less than two years after Cain’s birth, Abel was born, the first child of Adam and Eve to be born in the second garden. When Abel grew up to the age of 12 years, he elected to be a herder; Cain had chosen to follow agriculture.
 \vs p076 2:2 Now, in those days it was customary to make offerings to the priesthood of the things at hand. Herders would bring of their flocks, farmers of the fruits of the fields; and in accordance with this custom, Cain and Abel likewise made periodic offerings to the priests. The two boys had many times argued about the relative merits of their vocations, and Abel was not slow to note that preference was shown for his animal sacrifices. In vain did Cain appeal to the traditions of the first Eden, to the former preference for the fruits of the fields. But this Abel would not allow, and he taunted his older brother in his discomfiture.
-\vs p076 2:3 In the days of the first Eden, Adam had indeed sought to discourage the offering of animal sacrifice so that Cain had a justifiable precedent for his contentions. It was, however, difficult to organize the religious life of the second Eden. Adam was burdened with a thousand and one details associated with the work of building, defence, and agriculture. Being much depressed spiritually, he intrusted the organization of worship and education to those of Nodite extraction who had served in these capacities in the first garden; and in even so short a time the officiating Nodite priests were reverting to the standards and rulings of pre\hyp{}Adamic times.
+\vs p076 2:3 In the days of the first Eden, Adam had indeed sought to discourage the offering of animal sacrifice so that Cain had a justifiable precedent for his contentions. It was, however, difficult to organize the religious life of the second Eden. Adam was burdened with a thousand and one details associated with the work of building, defence, and agriculture. Being much depressed spiritually, he entrusted the organization of worship and education to those of Nodite extraction who had served in these capacities in the first garden; and in even so short a time the officiating Nodite priests were reverting to the standards and rulings of pre\hyp{}Adamic times.
 \vs p076 2:4 The two boys never got along well, and this matter of sacrifices further contributed to the growing hatred between them. Abel knew he was the son of both Adam and Eve and never failed to impress upon Cain that Adam was not his father. Cain was not pure violet as his father was of the Nodite race later admixed with the blue and the red man and with the aboriginal Andonic stock. And all of this, with Cain’s natural bellicose inheritance, caused him to nourish an ever\hyp{}increasing hatred for his younger brother.
 \vs p076 2:5 The boys were respectively 18 and 20 years of age when the tension between them was finally resolved, one day, when Abel’s taunts so infuriated his bellicose brother that Cain turned upon him in wrath and slew him.
 \vs p076 2:6 \pc The observation of Abel’s conduct establishes the value of environment and education as factors in character development. Abel had an ideal inheritance, and heredity lies at the bottom of all character; but the influence of an inferior environment virtually neutralized this magnificent inheritance. Abel, especially during his younger years, was greatly influenced by his unfavourable surroundings. He would have become an entirely different person had he lived to be 25 or 30; his superb inheritance would then have shown itself. While a good environment cannot contribute much toward really overcoming the character handicaps of a base heredity, a bad environment can very effectively spoil an excellent inheritance, at least during the younger years of life. Good social environment and proper education are indispensable soil and atmosphere for getting the most out of a good inheritance.
