--- a/tex/p109.tex
+++ b/tex/p109.tex
@@ -14,11 +14,11 @@
 \vs p109 2:4 \ublistelem{3.}\bibnobreakspace Has a subject who has made the supreme decision, has entered into a solemn and sincere betrothal with the Adjuster. The Adjuster looks beforehand to the time of actual fusion and reckons the union as an event of fact.
 \vs p109 2:5 \ublistelem{4.}\bibnobreakspace Has a subject who has been mustered into one of the reserve corps of destiny on an evolutionary world of mortal ascension.
 \vs p109 2:6 \ublistelem{5.}\bibnobreakspace At some time, during human sleep, has been temporarily detached from the mind of mortal incarceration to perform some exploit of liaison, contact, reregistration, or other extrahuman service associated with the spiritual administration of the world of assignment.
-\vs p109 2:7 \ublistelem{6.}\bibnobreakspace Has served in a time of crisis in the experience of some human being who was the material complement of a spirit personality intrusted with the enactment of some cosmic achievement essential to the spiritual economy of the planet.
+\vs p109 2:7 \ublistelem{6.}\bibnobreakspace Has served in a time of crisis in the experience of some human being who was the material complement of a spirit personality entrusted with the enactment of some cosmic achievement essential to the spiritual economy of the planet.
 \vs p109 2:8 \pc Self\hyp{}acting Adjusters seem to possess a marked degree of will in all matters not involving the human personalities of their immediate indwelling, as is indicated by their numerous exploits both within and without the mortal subjects of attachment. Such Adjusters participate in numerous activities of the realm, but more frequently they function as undetected indwellers of the earthly tabernacles of their own choosing.
 \vs p109 2:9 Undoubtedly these higher and more experienced types of Adjusters can communicate with those in other realms. But while self\hyp{}acting Adjusters do thus intercommunicate, they do so only on the levels of their mutual work and for the purpose of preserving custodial data essential to the Adjuster ministry of the realms of their sojourn, though on occasions they have been known to function in interplanetary matters during times of crisis.
 \vs p109 2:10 Supreme and self\hyp{}acting Adjusters can leave the human body at will. The indwellers are not an organic or biologic part of mortal life; they are divine superimpositions thereon. In the original life plans they were provided for, but they are not indispensable to material existence. Nevertheless it should be recorded that they very rarely, even temporarily, leave their mortal tabernacles after they once take up their indwelling.
-\vs p109 2:11 The superacting Adjusters are those who have achieved the conquest of their intrusted tasks and only await the dissolution of the material\hyp{}life vehicle or the translation of the immortal soul.
+\vs p109 2:11 The superacting Adjusters are those who have achieved the conquest of their entrusted tasks and only await the dissolution of the material\hyp{}life vehicle or the translation of the immortal soul.
 \usection{3.\bibnobreakspace Relation of Adjusters to Mortal Types}
 \vs p109 3:1 The character of the detailed work of Mystery Monitors varies in accordance with the nature of their assignments, as to whether or not they are \bibemph{liaison} or \bibemph{fusion} Adjusters. Some Adjusters are merely loaned for the temporal lifetimes of their subjects; others are bestowed as personality candidates with permission for everlasting fusion if their subjects survive. There is also a slight variation in their work among the different planetary types as well as in different systems and universes. But, on the whole, their labours are remarkably uniform, more so than are the duties of any of the created orders of celestial beings.
 \vs p109 3:2 On certain primitive worlds (the series one group) the Adjuster indwells the mind of the creature as an experiential training, chiefly for self\hyp{}culture and progressive development. Virgin Adjusters are usually sent to such worlds during the earlier times when primitive men are arriving in the valley of decision, but when comparatively few will elect to ascend the moral heights beyond the hills of self\hyp{}mastery and character acquirement to attain the higher levels of emerging spirituality. (Many, however, who fail of Adjuster fusion do survive as Spirit\hyp{}fused ascenders.) The Adjusters receive valuable training and acquire wonderful experience in transient association with primitive minds, and they are able subsequently to utilize this experience for the benefit of superior beings on other worlds. \bibemph{Nothing of survival value is ever lost in all the wide universe.}
@@ -48,7 +48,7 @@
 \vs p109 6:4 The activities of Adjusters in your local universe are directed by the Personalized Adjuster of Michael of Nebadon, that very Monitor who guided him step by step when he lived his human life in the flesh of Joshua ben Joseph. Faithful to his trust was this extraordinary Adjuster, and wisely did this valiant Monitor direct the human nature, ever guiding the mortal mind of the Paradise Son in the choosing of the path of the Father’s perfect will. This Adjuster had previously served with Machiventa Melchizedek in the days of Abraham and had engaged in tremendous exploits both previous to this indwelling and between these bestowal experiences.
 \vs p109 6:5 This Adjuster did indeed triumph in Jesus’ human mind --- that mind which in each of life’s recurring situations maintained a consecrated dedication to the Father’s will, saying, “Not my will, but yours, be done.” Such decisive consecration constitutes the true passport from the limitations of human nature to the finality of divine attainment.
 \vs p109 6:6 This same Adjuster now reflects in the inscrutable nature of his mighty personality the prebaptismal humanity of Joshua ben Joseph, the eternal and living transcript of the eternal and living values which the greatest of all Urantians created out of the humble circumstances of a commonplace life as it was lived to the complete exhaustion of the spiritual values attainable in mortal experience.
-\vs p109 6:7 Everything of permanent value which is intrusted to an Adjuster is assured eternal survival. In certain instances the Monitor holds these possessions for bestowal on a mortal mind of future indwelling; in others, and upon personalization, these surviving and conserved realities are held in trust for future utilization in the service of the Architects of the Master Universe.
+\vs p109 6:7 Everything of permanent value which is entrusted to an Adjuster is assured eternal survival. In certain instances the Monitor holds these possessions for bestowal on a mortal mind of future indwelling; in others, and upon personalization, these surviving and conserved realities are held in trust for future utilization in the service of the Architects of the Master Universe.
 \usection{7.\bibnobreakspace Destiny of Personalized Adjusters}
 \vs p109 7:1 We cannot state whether or not non\hyp{}Adjuster Father fragments are personalizable, but you have been informed that personality is the sovereign freewill bestowal of the Universal Father. As far as we know, the Adjuster type of Father fragment attains personality only by the acquirement of personal attributes through service\hyp{}ministry to a personal being. These Personalized Adjusters are at home on Divinington, where they instruct and direct their prepersonal associates.
 \vs p109 7:2 Personalized Thought Adjusters are the untrammelled, unassigned, and sovereign stabilizers and compensators of the far\hyp{}flung universe of universes. They combine the Creator and creature experience --- existential and experiential. They are conjoint time and eternity beings. They associate the prepersonal and the personal in universe administration.
