--- a/tex/p119.tex
+++ b/tex/p119.tex
@@ -24,7 +24,7 @@
 \vs p119 2:7 And then did this transient ruler of a rebellious system take leave of the planet of his short administrative sojourn, while on the third day thereafter Michael appeared on Salvington and resumed the direction of the universe of Nebadon. There soon followed the third Uversa proclamation of the advancing jurisdiction of the sovereignty and authority of Michael. The first proclamation was made at the time of his arrival in Nebadon, the second was issued soon after the completion of the Melchizedek bestowal, and now the third follows upon the termination of the second or Lanonandek mission.
 \usection{3.\bibnobreakspace The Third Bestowal}
 \vs p119 3:1 The supreme council on Salvington had just finished the consideration of the call of the Life Carriers on planet 217 in system 87 in constellation 61 for the dispatch to their assistance of a Material Son. Now this planet was situated in a system of inhabited worlds where another System Sovereign had gone astray, the second such rebellion in all Nebadon up to that time.
-\vs p119 3:2 Upon the request of Michael, action on the petition of the Life Carriers of this planet was deferred pending its consideration by Immanuel and his report thereon. This was an irregular procedure, and I well remember how we all anticipated something unusual, and we were not long held in suspense. Michael proceeded to place universe direction in the hands of Immanuel, while he intrusted command of the celestial forces to Gabriel, and having thus disposed of his administrative responsibilities, he took leave of the Universe Mother Spirit and vanished from the dispatching field of Salvington precisely as he had done on two previous occasions.
+\vs p119 3:2 Upon the request of Michael, action on the petition of the Life Carriers of this planet was deferred pending its consideration by Immanuel and his report thereon. This was an irregular procedure, and I well remember how we all anticipated something unusual, and we were not long held in suspense. Michael proceeded to place universe direction in the hands of Immanuel, while he entrusted command of the celestial forces to Gabriel, and having thus disposed of his administrative responsibilities, he took leave of the Universe Mother Spirit and vanished from the dispatching field of Salvington precisely as he had done on two previous occasions.
 \vs p119 3:3 And, as might have been expected, on the third day thereafter there appeared, unannounced, on the headquarters world of system 87 in constellation 61, a strange Material Son, accompanied by a lone seconaphim, accredited by the Uversa Ancients of Days, and certified by Immanuel of Salvington. Immediately the acting System Sovereign appointed this new and mysterious Material Son acting Planetary Prince of world 217, and this designation was at once confirmed by the Most Highs of constellation 61.
 \vs p119 3:4 Thus did this unique Material Son begin his difficult career on a quarantined world of secession and rebellion, located in a beleaguered system without any direct communication with the outside universe, working alone for one whole generation of planetary time. This emergency Material Son effected the repentance and reclamation of the defaulting Planetary Prince and his entire staff and witnessed the restoration of the planet to the loyal service of the Paradise rule as established in the local universes. In due time a Material Son and Daughter arrived on this rejuvenated and redeemed world, and when they had been duly installed as visible planetary rulers, the transitory or emergency Planetary Prince took formal leave, disappearing at noon one day. On the third day thereafter, Michael appeared in his accustomed place on Salvington, and very soon the superuniverse broadcasts carried the fourth proclamation of the Ancients of Days announcing the further advancement of the sovereignty of Michael in Nebadon.
 \vs p119 3:5 I regret that I do not have permission to narrate the patience, fortitude, and skill with which this Material Son met the trying situations on this confused planet. The reclamation of this isolated world is one of the most beautifully touching chapters in the annals of salvation throughout Nebadon. By the end of this mission it had become evident to all Nebadon as to why their beloved ruler chose to engage in these repeated bestowals in the likeness of some subordinate order of intelligent being.
@@ -46,7 +46,7 @@
 \vs p119 5:5 Still, the technique of these successive bestowals remained a mystery. Even Gabriel confesses that he does not comprehend the method whereby this Paradise Son and universe Creator could, at will, assume the personality and live the life of one of his own subordinate creatures.
 \usection{6.\bibnobreakspace The Sixth Bestowal}
 \vs p119 6:1 Now that all Salvington was familiar with the preliminaries of an impending bestowal, Michael called the sojourners on the headquarters planet together and, for the first time, unfolded the remainder of the incarnation plan, announcing that he was soon to leave Salvington for the purpose of assuming the career of a morontia mortal at the courts of the Most High Fathers on the headquarters planet of the fifth constellation. And then we heard for the first time the announcement that his seventh and final bestowal would be made on some evolutionary world in the likeness of mortal flesh.
-\vs p119 6:2 Before leaving Salvington for the sixth bestowal, Michael addressed the assembled inhabitants of the sphere and departed in full view of everyone, accompanied by a lone seraphim and the Bright and Morning Star of Nebadon. While the direction of the universe had again been intrusted to Immanuel, there was a wider distribution of administrative responsibilities.
+\vs p119 6:2 Before leaving Salvington for the sixth bestowal, Michael addressed the assembled inhabitants of the sphere and departed in full view of everyone, accompanied by a lone seraphim and the Bright and Morning Star of Nebadon. While the direction of the universe had again been entrusted to Immanuel, there was a wider distribution of administrative responsibilities.
 \vs p119 6:3 Michael appeared on the headquarters of constellation five as a full\hyp{}fledged morontia mortal of ascending status. I regret that I am forbidden to reveal the details of this unnumbered morontia mortal’s career, for it was one of the most extraordinary and amazing epochs in Michael’s bestowal experience, not even excepting his dramatic and tragic sojourn on Urantia. But among the many restrictions imposed upon me in accepting this commission is one which forbids my undertaking to unfold the details of this wonderful career of Michael as the morontia mortal of Endantum.
 \vs p119 6:4 When Michael returned from this morontia bestowal, it was apparent to all of us that our Creator had become a fellow creature, that the Universe Sovereign was also the friend and sympathetic helper of even the lowest form of created intelligence in his realms. We had noted this progressive acquirement of the creature’s viewpoint in universe administration before this, for it had been gradually appearing, but it became more apparent after the completion of the morontia mortal bestowal, even still more so after his return from the career of the carpenter’s son on Urantia.
 \vs p119 6:5 We were informed in advance by Gabriel of the time of Michael’s release from the morontia bestowal, and accordingly we arranged a suitable reception on Salvington. Millions upon millions of beings were assembled from the constellation headquarters worlds of Nebadon, and a majority of the sojourners on the worlds adjacent to Salvington were gathered together to welcome him back to the rulership of his universe. In response to our many addresses of welcome and expressions of appreciation of a Sovereign so vitally interested in his creatures, he only replied: “I have simply been about my Father’s business. I am only doing the pleasure of the Paradise Sons who love and crave to understand their creatures.”
