--- a/tex/p122.tex
+++ b/tex/p122.tex
@@ -1,7 +1,7 @@
 \upaper{122}{Birth and Infancy of Jesus}
 \author{Midwayer Commission}
 \vs p122 0:1 It will hardly be possible fully to explain the many reasons which led to the selection of Palestine as the land for Michael’s bestowal, and especially as to just why the family of Joseph and Mary should have been chosen as the immediate setting for the appearance of this Son of God on Urantia.
-\vs p122 0:2 After a study of the special report on the status of segregated worlds prepared by the Melchizedeks, in counsel with Gabriel, Michael finally chose Urantia as the planet whereon to enact his final bestowal. Subsequent to this decision Gabriel made a personal visit to Urantia, and, as a result of his study of human groups and his survey of the spiritual, intellectual, racial, and geographic features of the world and its peoples, he decided that the Hebrews possessed those relative advantages which warranted their selection as the bestowal race. Upon Michael’s approval of this decision, Gabriel appointed and dispatched to Urantia the Family Commission of Twelve --- selected from among the higher orders of universe personalities --- which was intrusted with the task of making an investigation of Jewish family life. When this commission ended its labours, Gabriel was present on Urantia and received the report nominating three prospective unions as being, in the opinion of the commission, equally favourable as bestowal families for Michael’s projected incarnation.
+\vs p122 0:2 After a study of the special report on the status of segregated worlds prepared by the Melchizedeks, in counsel with Gabriel, Michael finally chose Urantia as the planet whereon to enact his final bestowal. Subsequent to this decision Gabriel made a personal visit to Urantia, and, as a result of his study of human groups and his survey of the spiritual, intellectual, racial, and geographic features of the world and its peoples, he decided that the Hebrews possessed those relative advantages which warranted their selection as the bestowal race. Upon Michael’s approval of this decision, Gabriel appointed and dispatched to Urantia the Family Commission of Twelve --- selected from among the higher orders of universe personalities --- which was entrusted with the task of making an investigation of Jewish family life. When this commission ended its labours, Gabriel was present on Urantia and received the report nominating three prospective unions as being, in the opinion of the commission, equally favourable as bestowal families for Michael’s projected incarnation.
 \vs p122 0:3 From the three couples nominated, Gabriel made the personal choice of Joseph and Mary, subsequently making his personal appearance to Mary, at which time he imparted to her the glad tidings that she had been selected to become the earth mother of the bestowal child.
 \usection{1.\bibnobreakspace Joseph and Mary}
 \vs p122 1:1 Joseph, the human father of Jesus (Joshua ben Joseph), was a Hebrew of the Hebrews, albeit he carried many non\hyp{}Jewish racial strains which had been added to his ancestral tree from time to time by the female lines of his progenitors. The ancestry of the father of Jesus went back to the days of Abraham and through this venerable patriarch to the earlier lines of inheritance leading to the Sumerians and Nodites and, through the southern tribes of the ancient blue man, to Andon and Fonta. David and Solomon were not in the direct line of Joseph’s ancestry, neither did Joseph’s lineage go directly back to Adam. Joseph’s immediate ancestors were mechanics --- builders, carpenters, masons, and smiths. Joseph himself was a carpenter and later a contractor. His family belonged to a long and illustrious line of the nobility of the common people, accentuated ever and anon by the appearance of unusual individuals who had distinguished themselves in connection with the evolution of religion on Urantia.
