--- a/tex/p128.tex
+++ b/tex/p128.tex
@@ -28,7 +28,7 @@
 \vs p128 2:4 \pc Before taking up his new employment at Sepphoris, Jesus held one of his periodic family conferences and solemnly installed James, then just past 18 years old, as acting head of the family. He promised his brother hearty support and full co\hyp{}operation and exacted formal promises of obedience to James from each member of the family. From this day James assumed full financial responsibility for the family, Jesus making his weekly payments to his brother. Never again did Jesus take the reins out of James’s hands. While working at Sepphoris he could have walked home every night if necessary, but he purposely remained away, assigning weather and other reasons, but his true motive was to train James and Joseph in the bearing of the family responsibility. He had begun the slow process of weaning his family. Each Sabbath Jesus returned to Nazareth, and sometimes during the week when occasion required, to observe the working of the new plan, to give advice and offer helpful suggestions.
 \vs p128 2:5 \pc Living much of the time in Sepphoris for six months afforded Jesus a new opportunity to become better acquainted with the gentile viewpoint of life. He worked with gentiles, lived with gentiles, and in every possible manner did he make a close and painstaking study of their habits of living and of the gentile mind.
 \vs p128 2:6 The moral standards of this home city of Herod Antipas were so far below those of even the caravan city of Nazareth that after six months’ sojourn at Sepphoris Jesus was not averse to finding an excuse for returning to Nazareth. The group he worked for were to become engaged on public work in both Sepphoris and the new city of Tiberias, and Jesus was disinclined to have anything to do with any sort of employment under the supervision of Herod Antipas. And there were still other reasons which made it wise, in the opinion of Jesus, for him to go back to Nazareth. When he returned to the repair shop, he did not again assume the personal direction of family affairs. He worked in association with James at the shop and as far as possible permitted him to continue oversight of the home. James’s management of family expenditures and his administration of the home budget were undisturbed.
-\vs p128 2:7 It was by just such wise and thoughtful planning that Jesus prepared the way for his eventual withdrawal from active participation in the affairs of his family. When James had had two years’ experience as acting head of the family --- and two full years before he (James) was to be married --- Joseph was placed in charge of the household funds and intrusted with the general management of the home.
+\vs p128 2:7 It was by just such wise and thoughtful planning that Jesus prepared the way for his eventual withdrawal from active participation in the affairs of his family. When James had had two years’ experience as acting head of the family --- and two full years before he (James) was to be married --- Joseph was placed in charge of the household funds and entrusted with the general management of the home.
 \usection{3.\bibnobreakspace The Twenty\hyp{}Third Year (A.D.\,17)}
 \vs p128 3:1 This year the financial pressure was slightly relaxed as four were at work. Miriam earned considerable by the sale of milk and butter; Martha had become an expert weaver. The purchase price of the repair shop was over \bibfrac{1}{3} paid. The situation was such that Jesus stopped work for three weeks to take Simon to Jerusalem for the Passover, and this was the longest period away from daily toil he had enjoyed since the death of his father.
 \vs p128 3:2 They journeyed to Jerusalem by way of the Decapolis and through Pella, Gerasa, Philadelphia, Heshbon, and Jericho. They returned to Nazareth by the coast route, touching Lydda, Joppa, Caesarea, thence around Mount Carmel to Ptolemais and Nazareth. This trip fairly well acquainted Jesus with the whole of Palestine north of the Jerusalem district.
