--- a/tex/p129.tex
+++ b/tex/p129.tex
@@ -28,7 +28,7 @@
 \vs p129 2:6 \pc But let us go back to observe Jesus in Jerusalem. For almost two months he spent the greater part of his time listening to the temple discussions with occasional visits to the various schools of the rabbis. Most of the Sabbath days he spent at Bethany.
 \vs p129 2:7 Jesus had carried with him to Jerusalem a letter from Salome, Zebedee’s wife, introducing him to the former high priest, Annas, as “one, the same as my own son.” Annas spent much time with him, personally taking him to visit the many academies of the Jerusalem religious teachers. While Jesus thoroughly inspected these schools and carefully observed their methods of teaching, he never so much as asked a single question in public. Although Annas looked upon Jesus as a great man, he was puzzled as to how to advise him. He recognized the foolishness of suggesting that he enter any of the schools of Jerusalem as a student, and yet he well knew Jesus would never be accorded the status of a regular teacher inasmuch as he had never been trained in these schools.
 \vs p129 2:8 Presently the time of the Passover drew near, and along with the throngs from every quarter there arrived at Jerusalem from Capernaum, Zebedee and his entire family. They all stopped at the spacious home of Annas, where they celebrated the Passover as one happy family.
-\vs p129 2:9 \pc Before the end of this Passover week, by apparent chance, Jesus met a wealthy traveller and his son, a young man about 17 years of age. These travellers hailed from India, and being on their way to visit Rome and various other points on the Mediterranean, they had arranged to arrive in Jerusalem during the Passover, hoping to find someone whom they could engage as interpreter for both and tutor for the son. The father was insistent that Jesus consent to travel with them. Jesus told him about his family and that it was hardly fair to go away for almost two years, during which time they might find themselves in need. Whereupon, this traveller from the Orient proposed to advance to Jesus the wages of one year so that he could intrust such funds to his friends for the safeguarding of his family against want. And Jesus agreed to make the trip.
+\vs p129 2:9 \pc Before the end of this Passover week, by apparent chance, Jesus met a wealthy traveller and his son, a young man about 17 years of age. These travellers hailed from India, and being on their way to visit Rome and various other points on the Mediterranean, they had arranged to arrive in Jerusalem during the Passover, hoping to find someone whom they could engage as interpreter for both and tutor for the son. The father was insistent that Jesus consent to travel with them. Jesus told him about his family and that it was hardly fair to go away for almost two years, during which time they might find themselves in need. Whereupon, this traveller from the Orient proposed to advance to Jesus the wages of one year so that he could entrust such funds to his friends for the safeguarding of his family against want. And Jesus agreed to make the trip.
 \vs p129 2:10 Jesus turned this large sum over to John the son of Zebedee. And you have been told how John applied this money toward the liquidation of the mortgage on the Capernaum property. Jesus took Zebedee fully into his confidence regarding this Mediterranean journey, but he enjoined him to tell no man, not even his own flesh and blood, and Zebedee never did disclose his knowledge of Jesus’ whereabouts during this long period of almost two years. Before Jesus’ return from this trip the family at Nazareth had just about given him up as dead. Only the assurances of Zebedee, who went up to Nazareth with his son John on several occasions, kept hope alive in Mary’s heart.
 \vs p129 2:11 \pc During this time the Nazareth family got along very well; Jude had considerably increased his quota and kept up this extra contribution until he was married. Notwithstanding that they required little assistance, it was the practice of John Zebedee to take presents each month to Mary and Ruth, as Jesus had instructed him.
 \usection{3.\bibnobreakspace The Twenty\hyp{}Ninth Year (A.D.\,23)}
