--- a/tex/p134.tex
+++ b/tex/p134.tex
@@ -14,7 +14,7 @@
 \vs p134 2:1 It was the first of April, A.D.\,24, when Jesus left Nazareth on the caravan trip to the Caspian Sea region. The caravan which Jesus joined as its conductor was going from Jerusalem by way of Damascus and Lake Urmia through Assyria, Media, and Parthia to the south\hyp{}eastern Caspian Sea region. It was a full year before he returned from this journey.\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[scale=\tunemarkup{pgkobomini}{0.47}\tunemarkup{pgkoboaurahd}{0.52}\tunemarkup{pghanlin}{0.47}\tunemarkup{pgnexus7}{0.46}\tunemarkup{pgkindledx}{0.35}]{../urantia-pictures/The_caravan_conductor.jpg}\caption{The Caravan Conductor by Gerry~Metz}\end{figure}}
 \vs p134 2:2 For Jesus this caravan trip was another adventure of exploration and personal ministry. He had an interesting experience with his caravan family --- passengers, guards, and camel drivers. Scores of men, women, and children residing along the route followed by the caravan lived richer lives as a result of their contact with Jesus, to them, the extraordinary conductor of a commonplace caravan. Not all who enjoyed these occasions of his personal ministry profited thereby, but the vast majority of those who met and talked with him were made better for the remainder of their natural lives.
 \vs p134 2:3 Of all his world travels this Caspian Sea trip carried Jesus nearest to the Orient and enabled him to gain a better understanding of the Far\hyp{}Eastern peoples. He made intimate and personal contact with every one of the surviving races of Urantia excepting the red. He equally enjoyed his personal ministry to each of these varied races and blended peoples, and all of them were receptive to the living truth which he brought them. The Europeans from the Far West and the Asiatics from the Far East alike gave attention to his words of hope and eternal life and were equally influenced by the life of loving service and spiritual ministry which he so graciously lived among them.
-\vs p134 2:4 \pc The caravan trip was successful in every way. This was a most interesting episode in the human life of Jesus, for he functioned during this year in an executive capacity, being responsible for the material intrusted to his charge and for the safe conduct of the travellers making up the caravan party. And he most faithfully, efficiently, and wisely discharged his multiple duties.
+\vs p134 2:4 \pc The caravan trip was successful in every way. This was a most interesting episode in the human life of Jesus, for he functioned during this year in an executive capacity, being responsible for the material entrusted to his charge and for the safe conduct of the travellers making up the caravan party. And he most faithfully, efficiently, and wisely discharged his multiple duties.
 \vs p134 2:5 On the return from the Caspian region, Jesus gave up the direction of the caravan at Lake Urmia, where he tarried for slightly over two weeks. He returned as a passenger with a later caravan to Damascus, where the owners of the camels besought him to remain in their service. Declining this offer, he journeyed on with the caravan train to Capernaum, arriving the first of April, A.D.\,25. No longer did he regard Nazareth as his home. Capernaum had become the home of Jesus, James, Mary, and Ruth. But Jesus never again lived with his family; when in Capernaum he made his home with the Zebedees.
 \usection{3.\bibnobreakspace The Urmia Lectures}
 \vs p134 3:1 On the way to the Caspian Sea, Jesus had stopped several days for rest and recuperation at the old Persian city of Urmia on the western shores of Lake Urmia. On the largest of a group of islands situated a short distance offshore near Urmia was located a large building --- a lecture amphitheatre --- dedicated to the “spirit of religion.” This structure was really a temple of the philosophy of religions.
