--- a/tex/p138.tex
+++ b/tex/p138.tex
@@ -5,7 +5,7 @@
 \usection{1.\bibnobreakspace Final Instructions}
 \vs p138 1:1 The next day, Sunday, June 23, A.D.\,26, Jesus imparted his final instructions to the six. He directed them to go forth, two and two, to teach the glad tidings of the kingdom. He forbade them to baptize and advised against public preaching. He went on to explain that later he would permit them to preach in public, but that for a season, and for many reasons, he desired them to acquire practical experience in dealing personally with their fellow men. Jesus purposed to make their first tour entirely one of \bibemph{personal work.} Although this announcement was something of a disappointment to the apostles, still they saw, at least in part, Jesus’ reason for thus beginning the proclamation of the kingdom, and they started out in good heart and with confident enthusiasm. He sent them forth by twos, James and John going to Kheresa, Andrew and Peter to Capernaum, while Philip and Nathaniel went to Tarichea.
 \vs p138 1:2 Before they began this first two weeks of service, Jesus announced to them that he desired to ordain 12 apostles to continue the work of the kingdom after his departure and authorized each of them to choose one man from among his early converts for membership in the projected corps of apostles. John spoke up, asking: “But, Master, will these six men come into our midst and share all things equally with us who have been with you since the Jordan and have heard all your teaching in preparation for this, our first labour for the kingdom?” And Jesus replied: \textcolour{ubdarkred}{“Yes, John, the men you choose shall become one with us, and you will teach them all that pertains to the kingdom, even as I have taught you.”} After thus speaking, Jesus left them.
-\vs p138 1:3 The six did not separate to go to their work until they had exchanged many words in discussion of Jesus’ instruction that each of them should choose a new apostle. Andrew’s counsel finally prevailed, and they went forth to their labours. In substance Andrew said: “The Master is right; we are too few to encompass this work. There is need for more teachers, and the Master has manifested great confidence in us inasmuch as he has intrusted us with the choosing of these six new apostles.” This morning, as they separated to go to their work, there was a bit of concealed depression in each heart. They knew they were going to miss Jesus, and besides their fear and timidity, this was not the way they had pictured the kingdom of heaven being inaugurated.
+\vs p138 1:3 The six did not separate to go to their work until they had exchanged many words in discussion of Jesus’ instruction that each of them should choose a new apostle. Andrew’s counsel finally prevailed, and they went forth to their labours. In substance Andrew said: “The Master is right; we are too few to encompass this work. There is need for more teachers, and the Master has manifested great confidence in us inasmuch as he has entrusted us with the choosing of these six new apostles.” This morning, as they separated to go to their work, there was a bit of concealed depression in each heart. They knew they were going to miss Jesus, and besides their fear and timidity, this was not the way they had pictured the kingdom of heaven being inaugurated.
 \vs p138 1:4 It had been arranged that the six were to labour for two weeks, after which they were to return to the home of Zebedee for a conference. Meantime Jesus went over to Nazareth to visit with Joseph and Simon and other members of his family living in that vicinity. Jesus did everything humanly possible, consistent with his dedication to the doing of his Father’s will, to retain the confidence and affection of his family. In this matter he did his full duty and more.
 \vs p138 1:5 While the apostles were out on this mission, Jesus thought much about John, now in prison. It was a great temptation to use his potential powers to release him, but once more he resigned himself to \textcolour{ubdarkred}{“wait upon the Father’s will.”}
 \usection{2.\bibnobreakspace Choosing the Six}
