--- a/tex/p139.tex
+++ b/tex/p139.tex
@@ -77,7 +77,7 @@
 \vs p139 6:2 When Nathaniel joined the apostles, he was 25 years old and was the next to the youngest of the group. He was the youngest of a family of seven, was unmarried, and the only support of aged and infirm parents, with whom he lived at Cana; his brothers and sister were either married or deceased, and none lived there. Nathaniel and Judas Iscariot were the two best educated men among the 12. Nathaniel had thought to become a merchant.
 \vs p139 6:3 \pc Jesus did not himself give Nathaniel a nickname, but the 12 soon began to speak of him in terms that signified honesty, sincerity. He was “without guile.” And this was his great virtue; he was both honest and sincere. The weakness of his character was his pride; he was very proud of his family, his city, his reputation, and his nation, all of which is commendable if it is not carried too far. But Nathaniel was inclined to go to extremes with his personal prejudices. He was disposed to prejudge individuals in accordance with his personal opinions. He was not slow to ask the question, even before he had met Jesus, “Can any good thing come out of Nazareth?” But Nathaniel was not obstinate, even if he was proud. He was quick to reverse himself when he once looked into Jesus’ face.
 \vs p139 6:4 In many respects Nathaniel was the odd genius of the 12. He was the apostolic philosopher and dreamer, but he was a very practical sort of dreamer. He alternated between seasons of profound philosophy and periods of rare and droll humour; when in the proper mood, he was probably the best storyteller among the 12. Jesus greatly enjoyed hearing Nathaniel discourse on things both serious and frivolous. Nathaniel progressively took Jesus and the kingdom more seriously, but never did he take himself seriously.
-\vs p139 6:5 The apostles all loved and respected Nathaniel, and he got along with them splendidly, excepting Judas Iscariot. Judas did not think Nathaniel took his apostleship sufficiently seriously and once had the temerity to go secretly to Jesus and lodge complaint against him. Said Jesus: \textcolour{ubdarkred}{“Judas, watch carefully your steps; do not overmagnify your office. Who of us is competent to judge his brother? It is not the Father’s will that his children should partake only of the serious things of life. Let me repeat: I have come that my brethren in the flesh may have joy, gladness, and life more abundantly. Go then, Judas, and do well that which has been intrusted to you but leave Nathaniel, your brother, to give account of himself to God.”} And the memory of this, with that of many similar experiences, long lived in the self\hyp{}deceiving heart of Judas Iscariot.
+\vs p139 6:5 The apostles all loved and respected Nathaniel, and he got along with them splendidly, excepting Judas Iscariot. Judas did not think Nathaniel took his apostleship sufficiently seriously and once had the temerity to go secretly to Jesus and lodge complaint against him. Said Jesus: \textcolour{ubdarkred}{“Judas, watch carefully your steps; do not overmagnify your office. Who of us is competent to judge his brother? It is not the Father’s will that his children should partake only of the serious things of life. Let me repeat: I have come that my brethren in the flesh may have joy, gladness, and life more abundantly. Go then, Judas, and do well that which has been entrusted to you but leave Nathaniel, your brother, to give account of himself to God.”} And the memory of this, with that of many similar experiences, long lived in the self\hyp{}deceiving heart of Judas Iscariot.
 \vs p139 6:6 Many times, when Jesus was away on the mountain with Peter, James, and John, and things were becoming tense and tangled among the apostles, when even Andrew was in doubt about what to say to his disconsolate brethren, Nathaniel would relieve the tension by a bit of philosophy or a flash of humour; good humour\fnst{\textbf{good humour}, According to Dr~Meredith Justin Sprunger the original Papers stated that the apostle Nathaniel ``had a good sense of humour for a Jew'', but after it was read the members of the Forum chuckled at this phrase. The next time they obtained this paper from the safe, they discovered the phrase ``for a Jew'' was deleted. I am assuming that this comment refers to this particular location as it seems to be the closest to providing just such a context.}, too.
 \vs p139 6:7 Nathaniel’s duty was to look after the families of the 12. He was often absent from the apostolic councils, for when he heard that sickness or anything out of the ordinary had happened to one of his charges, he lost no time in getting to that home. The 12 rested securely in the knowledge that their families’ welfare was safe in the hands of Nathaniel.
 \vs p139 6:8 \pc Nathaniel most revered Jesus for his tolerance. He never grew weary of contemplating the broadmindedness and generous sympathy of the Son of Man.
