--- a/tex/p012.tex
+++ b/tex/p012.tex
@@ -77,7 +77,7 @@
 \vs p012 6:5 The universe is highly predictable only in the quantitative or gravity\hyp{}measurement sense; even the primal physical forces are not responsive to linear gravity, nor are the higher mind meanings and true spirit values of ultimate universe realities. Qualitatively, the universe is not highly predictable as regards new associations of forces, either physical, mindal, or spiritual, although many such combinations of energies or forces become partially predictable when subjected to critical observation. When matter, mind, and spirit are unified by creature personality, we are unable fully to predict the decisions of such a freewill being.
 \vs p012 6:6 \pc All phases of primordial force, nascent spirit, and other nonpersonal ultimates appear to react in accordance with certain relatively stable but unknown laws and are characterized by a latitude of performance and an elasticity of response which are often disconcerting when encountered in the phenomena of a circumscribed and isolated situation. What is the explanation of this unpredictable freedom of reaction disclosed by these emerging universe actualities? These unknown, unfathomable unpredictables --- whether pertaining to the behaviour of a primordial unit of force, the reaction of an unidentified level of mind, or the phenomenon of a vast preuniverse in the making in the domains of outer space --- probably disclose the activities of the Ultimate and the presence\hyp{}performances of the Absolutes, which antedate the function of all universe Creators.
 \vs p012 6:7 We do not really know, but we surmise that such amazing versatility and such profound co\hyp{}ordination signify the presence and performance of the Absolutes, and that such diversity of response in the face of apparently uniform causation discloses the reaction of the Absolutes, not only to the immediate and situational causation, but also to all other related causations throughout the entire master universe.
-\vs p012 6:8 \pc Individuals have their guardians of destiny; planets, systems, constellations, universes, and superuniverses each have their respective rulers who labour for the good of their domains. Havona and even the grand universe are watched over by those intrusted with such high responsibilities. But who fosters and cares for the fundamental needs of the master universe as a whole, from Paradise to the fourth and outermost space level? Existentially such overcare is probably attributable to the Paradise Trinity, but from an experiential viewpoint the appearance of the post\hyp{}Havona universes is dependent on:
+\vs p012 6:8 \pc Individuals have their guardians of destiny; planets, systems, constellations, universes, and superuniverses each have their respective rulers who labour for the good of their domains. Havona and even the grand universe are watched over by those entrusted with such high responsibilities. But who fosters and cares for the fundamental needs of the master universe as a whole, from Paradise to the fourth and outermost space level? Existentially such overcare is probably attributable to the Paradise Trinity, but from an experiential viewpoint the appearance of the post\hyp{}Havona universes is dependent on:
 \vs p012 6:9 \ublistelem{1.}\bibnobreakspace The Absolutes in potential.
 \vs p012 6:10 \ublistelem{2.}\bibnobreakspace The Ultimate in direction.
 \vs p012 6:11 \ublistelem{3.}\bibnobreakspace The Supreme in evolutionary co\hyp{}ordination.
