--- a/tex/p023.tex
+++ b/tex/p023.tex
@@ -24,7 +24,7 @@
 \vs p023 2:8 \ublistelem{6.}\bibnobreakspace Ambassadors and Emissaries of Special Assignment.
 \vs p023 2:9 \ublistelem{7.}\bibnobreakspace Revelators of Truth.
 \vs p023 2:10 \pc These spirit messengers are in every sense interchangeable from one type of service to another; such transfers are constantly taking place. There are no separate orders of Solitary Messengers; they are spiritually alike and in every sense equal. While they are generally designated by number, they are known to the Infinite Spirit by personal names. They are known to the rest of us by the name or number designative of their current assignment.
-\vs p023 2:11 \ublistelem{1.}\bibnobreakspace \bibemph{Messengers of the Paradise Trinity.} I am not permitted to reveal much of the work of the group of messengers assigned to the Trinity. They are the trusted and secret servants of the Deities, and when intrusted with special messages which involve the unrevealed policies and future conduct of the Gods, they have never been known to divulge a secret or betray the confidence reposed in their order. And all this is related in this connection, not to appear boastful of their perfection, but rather to point out that the Deities can and do create \bibemph{perfect beings.}
+\vs p023 2:11 \ublistelem{1.}\bibnobreakspace \bibemph{Messengers of the Paradise Trinity.} I am not permitted to reveal much of the work of the group of messengers assigned to the Trinity. They are the trusted and secret servants of the Deities, and when entrusted with special messages which involve the unrevealed policies and future conduct of the Gods, they have never been known to divulge a secret or betray the confidence reposed in their order. And all this is related in this connection, not to appear boastful of their perfection, but rather to point out that the Deities can and do create \bibemph{perfect beings.}
 \vs p023 2:12 The confusion and turmoil of Urantia do not signify that the Paradise Rulers lack either interest or ability to manage affairs differently. The Creators are possessed of full power to make Urantia a veritable paradise, but such an Eden would not contribute to the development of those strong, noble, and experienced characters which the Gods are so surely forging out on your world between the anvils of necessity and the hammers of anguish. Your anxieties and sorrows, your trials and disappointments, are just as much a part of the divine plan on your sphere as are the exquisite perfection and infinite adaptation of all things to their supreme purpose on the worlds of the central and perfect universe.
 \vs p023 2:13 \ublistelem{2.}\bibnobreakspace \bibemph{Messengers of the Havona Circuits.} Throughout the ascendant career you will be vaguely, but increasingly, able to detect the presence of the Solitary Messengers, but not until you reach Havona will you recognize them unmistakably. The first of the messengers you will see face to face will be those of the Havona circuits.
 \vs p023 2:14 Solitary Messengers enjoy special relations with the natives of the Havona worlds. These messengers, who are so functionally handicapped when associating with one another, can and do have a very close and personal communion with the Havona natives. But it is quite impossible to convey to human minds the supreme satisfactions consequent upon the contact of the minds of these divinely perfect beings with the spirits of such near\hyp{}transcendent personalities.
