--- a/tex/p034.tex
+++ b/tex/p034.tex
@@ -7,7 +7,7 @@
 \vs p034 1:1 After the completion of the physical organization of a starry and planetary cluster and the establishment of the energy circuits by the superuniverse power centres, subsequent to this preliminary work of creation by the agencies of the Infinite Spirit, operating through, and under the direction of, his local universe creative focalization, there goes forth the proclamation of the Michael Son that life is next to be projected in the newly organized universe. Upon the Paradise recognition of this declaration of intention, there occurs a reaction of approval in the Paradise Trinity, followed by the disappearance in the spiritual shining of the Deities of the Master Spirit in whose superuniverse this new creation is organizing. Meanwhile the other Master Spirits draw near this central lodgement of the Paradise Deities, and subsequently, when the Deity\hyp{}embraced Master Spirit emerges to the recognition of his fellows, there occurs what is known as a “primary eruption.” This is a tremendous spiritual flash, a phenomenon clearly discernible as far away as the headquarters of the superuniverse concerned; and simultaneously with this little\hyp{}understood Trinity manifestation there occurs a marked change in the nature of the creative spirit presence and power of the Infinite Spirit resident in the local universe concerned. In response to these Paradise phenomena there immediately personalizes, in the very presence of the Creator Son, a new personal representation of the Infinite Spirit. This is the Divine Minister. The individualized Creative Spirit helper of the Creator Son has become his personal creative associate, the local universe Mother Spirit.
 \vs p034 1:2 From and through this new personal segregation of the Conjoint Creator there proceed the established currents and the ordained circuits of spirit power and spiritual influence destined to pervade all the worlds and beings of that local universe. In reality, this new and personal presence is but a transformation of the pre\hyp{}existent and less personal associate of the Son in his earlier work of physical universe organization.
 \vs p034 1:3 \pc This is the relation of a stupendous drama in few words, but it represents about all that can be told regarding these momentous transactions. They are instantaneous, inscrutable, and incomprehensible; the secret of the technique and procedure resides in the bosom of the Paradise Trinity. Of only one thing are we certain: The Spirit presence in the local universe during the time of purely physical creation or organization was incompletely differentiated from the spirit of the Paradise Infinite Spirit; whereas, after the reappearance of the supervising Master Spirit from the secret embrace of the Gods and following the flash of spiritual energy, the local universe manifestation of the Infinite Spirit suddenly and completely changes to the personal likeness of that Master Spirit who was in transmuting liaison with the Infinite Spirit. The local universe Mother Spirit thus acquires a personal nature tinged by that of the Master Spirit of the superuniverse of astronomic jurisdiction.
-\vs p034 1:4 This personalized presence of the Infinite Spirit, the Creative Mother Spirit of the local universe, is known in Satania as the Divine Minister. To all practical intents and spiritual purposes this manifestation of Deity is a divine individual, a spirit person. And she is so recognized and regarded by the Creator Son. It is through this localization and personalization of the Third Source and Centre in our local universe that the Spirit could subsequently become so fully subject to the Creator Son that of this Son it was truly said, “All power in heaven and on earth has been intrusted to him.”
+\vs p034 1:4 This personalized presence of the Infinite Spirit, the Creative Mother Spirit of the local universe, is known in Satania as the Divine Minister. To all practical intents and spiritual purposes this manifestation of Deity is a divine individual, a spirit person. And she is so recognized and regarded by the Creator Son. It is through this localization and personalization of the Third Source and Centre in our local universe that the Spirit could subsequently become so fully subject to the Creator Son that of this Son it was truly said, “All power in heaven and on earth has been entrusted to him.”
 \usection{2.\bibnobreakspace Nature of the Divine Minister}
 \vs p034 2:1 Having undergone marked personality metamorphosis at the time of life creation, the Divine Minister thereafter functions as a person and co\hyp{}operates in a very personal manner with the Creator Son in the planning and management of the extensive affairs of their local creation. To many universe types of being, even this representation of the Infinite Spirit may not appear to be wholly personal during the ages preceding the final Michael bestowal; but subsequent to the elevation of the Creator Son to the sovereign authority of a Master Son, the Creative Mother Spirit becomes so augmented in personal qualities as to be personally recognized by all contacting individuals.
 \vs p034 2:2 From the earliest association with the Creator Son the Universe Spirit possesses all the physical\hyp{}control attributes of the Infinite Spirit, including the full endowment of antigravity. Upon the attainment of personal status the Universe Spirit exerts just as full and complete control of mind gravity, in the local universe, as would the Infinite Spirit if personally present.
