--- a/tex/p074.tex
+++ b/tex/p074.tex
@@ -1,6 +1,6 @@
 \upaper{74}{Adam and Eve}
 \author{Solonia}
-\vs p074 0:1 Adam and Eve arrived on Urantia, from the year A.D.\,1934, 37,848 years ago. It was in midseason when the Garden was in the height of bloom that they arrived. At high noon and unannounced, the two seraphic transports, accompanied by the Jerusem personnel intrusted with the transportation of the biologic uplifters to Urantia, settled slowly to the surface of the revolving planet in the vicinity of the temple of the Universal Father. All the work of rematerializing the bodies of Adam and Eve was carried on within the precincts of this newly created shrine. And from the time of their arrival ten days passed before they were re\hyp{}created in dual human form for presentation as the world’s new rulers. They regained consciousness simultaneously. The Material Sons and Daughters always serve together. It is the essence of their service at all times and in all places never to be separated. They are designed to work in pairs; seldom do they function alone.
+\vs p074 0:1 Adam and Eve arrived on Urantia, from the year A.D.\,1934, 37,848 years ago. It was in midseason when the Garden was in the height of bloom that they arrived. At high noon and unannounced, the two seraphic transports, accompanied by the Jerusem personnel entrusted with the transportation of the biologic uplifters to Urantia, settled slowly to the surface of the revolving planet in the vicinity of the temple of the Universal Father. All the work of rematerializing the bodies of Adam and Eve was carried on within the precincts of this newly created shrine. And from the time of their arrival ten days passed before they were re\hyp{}created in dual human form for presentation as the world’s new rulers. They regained consciousness simultaneously. The Material Sons and Daughters always serve together. It is the essence of their service at all times and in all places never to be separated. They are designed to work in pairs; seldom do they function alone.
 \usection{1.\bibnobreakspace Adam and Eve on Jerusem}
 \vs p074 1:1 The Planetary Adam and Eve of Urantia were members of the senior corps of Material Sons on Jerusem, being jointly number 14,311. They belonged to the third physical series and were a little more than 2.4\,m in height.
 \vs p074 1:2 At the time Adam was chosen to come to Urantia, he was employed, with his mate, in the trial\hyp{}and\hyp{}testing physical laboratories of Jerusem. For more than 15,000 years they had been directors of the division of experimental energy as applied to the modification of living forms. Long before this they had been teachers in the citizenship schools for new arrivals on Jerusem. And all this should be borne in mind in connection with the narration of their subsequent conduct on Urantia.
