--- a/tex/p110.tex
+++ b/tex/p110.tex
@@ -31,7 +31,7 @@
 \vs p110 4:1 Adjusters are able to receive the continuous stream of cosmic intelligence coming in over the master circuits of time and space; they are in full touch with the spirit intelligence and energy of the universes. But these mighty indwellers are unable to transmit very much of this wealth of wisdom and truth to the minds of their mortal subjects because of the lack of commonness of nature and the absence of responsive recognition.\tunemarkup{pictures}{\begin{figure}[H]\centering\includegraphics[scale=\tunemarkup{pgkobomini}{0.49}\tunemarkup{pgkoboaurahd}{0.43}\tunemarkup{pghanlin}{0.49}\tunemarkup{pgnexus7}{0.42}\tunemarkup{pgkindledx}{0.39}]{../urantia-pictures/Troy-Bishop/Morontia-Soul.jpg}\caption{Morontia Soul by Vincent~Ventola}\end{figure}}
 \vs p110 4:2 The Thought Adjuster is engaged in a constant effort so to spiritualize your mind as to evolve your morontia soul; but you yourself are mostly unconscious of this inner ministry. You are quite incapable of distinguishing the product of your own material intellect from that of the conjoint activities of your soul and the Adjuster.
 \vs p110 4:3 Certain abrupt presentations of thoughts, conclusions, and other pictures of mind are sometimes the direct or indirect work of the Adjuster; but far more often they are the sudden emergence into consciousness of ideas which have been grouping themselves together in the submerged mental levels, natural and everyday occurrences of normal and ordinary psychic function inherent in the circuits of the evolving animal mind. (In contrast with these subconscious emanations, the revelations of the Adjuster appear through the realms of the superconscious.)
-\vs p110 4:4 Trust all matters of mind beyond the dead level of consciousness to the custody of the Adjusters. In due time, if not in this world then on the mansion worlds, they will give good account of their stewardship, and eventually will they bring forth those meanings and values intrusted to their care and keeping. They will resurrect every worthy treasure of the mortal mind if you survive.
+\vs p110 4:4 Trust all matters of mind beyond the dead level of consciousness to the custody of the Adjusters. In due time, if not in this world then on the mansion worlds, they will give good account of their stewardship, and eventually will they bring forth those meanings and values entrusted to their care and keeping. They will resurrect every worthy treasure of the mortal mind if you survive.
 \vs p110 4:5 \pc There exists a vast gulf between the human and the divine, between man and God. The Urantia races are so largely electrically and chemically controlled, so highly animallike in their common behaviour, so emotional in their ordinary reactions, that it becomes exceedingly difficult for the Monitors to guide and direct them. You are so devoid of courageous decisions and consecrated co\hyp{}operation that your indwelling Adjusters find it next to impossible to communicate directly with the human mind. Even when they do find it possible to flash a gleam of new truth to the evolving mortal soul, this spiritual revelation often so blinds the creature as to precipitate a convulsion of fanaticism or to initiate some other intellectual upheaval which results disastrously. Many a new religion and strange “ism” has arisen from the aborted, imperfect, misunderstood, and garbled communications of the Thought Adjusters.
 \vs p110 4:6 For many thousands of years, so the records of Jerusem show, in each generation there have lived fewer and fewer beings who could function safely with self\hyp{}acting Adjusters. This is an alarming picture, and the supervising personalities of Satania look with favour upon the proposals of some of your more immediate planetary supervisors who advocate the inauguration of measures designed to foster and conserve the higher spiritual types of the Urantia races.
 \usection{5.\bibnobreakspace Erroneous Concepts of Adjuster Guidance}
