--- a/tex/p114.tex
+++ b/tex/p114.tex
@@ -17,7 +17,7 @@
 \vs p114 1:3 There is little likelihood that any marked change will be made in the government of Urantia during the present dispensation unless the vicegerent Planetary Prince should arrive to assume his titular responsibilities. It appears to certain of our associates that at some time in the near future the plan of sending one of the 24 counsellors to Urantia to act as governor general will be superseded by the formal arrival of Machiventa Melchizedek with the vicegerent mandate of the sovereignty of Urantia. As acting Planetary Prince he would undoubtedly continue in charge of the planet until the final adjudication of the Lucifer rebellion and probably on into the distant future of planetary settlement in light and life.
 \vs p114 1:4 Some believe that Machiventa will not come to take personal direction of Urantian affairs until the end of the current dispensation. Others hold that the vicegerent Prince may not come, as such, until Michael sometime returns to Urantia as he promised when still in the flesh. Still others, including this narrator, look for Melchizedek’s appearance any day or hour.
 \usection{2.\bibnobreakspace The Board of Planetary Supervisors}
-\vs p114 2:1 Since the times of Michael’s bestowal on your world the general management of Urantia has been intrusted to a special group on Jerusem of 24 onetime Urantians. Qualification for membership on this commission is unknown to us, but we have observed that those who have been thus commissioned have all been contributors to the enlarging sovereignty of the Supreme in the system of Satania. By nature they were all real leaders when they functioned on Urantia, and (excepting Machiventa Melchizedek) these qualities of leadership have been further augmented by mansion world experience and supplemented by the training of Jerusem citizenship. Members are nominated to the 24 by the cabinet of Lanaforge, seconded by the Most Highs of Edentia, approved by the Assigned Sentinel of Jerusem, and appointed by Gabriel of Salvington in accordance with the mandate of Michael. The temporary appointees function just as fully as do the permanent members of this commission of special supervisors.
+\vs p114 2:1 Since the times of Michael’s bestowal on your world the general management of Urantia has been entrusted to a special group on Jerusem of 24 onetime Urantians. Qualification for membership on this commission is unknown to us, but we have observed that those who have been thus commissioned have all been contributors to the enlarging sovereignty of the Supreme in the system of Satania. By nature they were all real leaders when they functioned on Urantia, and (excepting Machiventa Melchizedek) these qualities of leadership have been further augmented by mansion world experience and supplemented by the training of Jerusem citizenship. Members are nominated to the 24 by the cabinet of Lanaforge, seconded by the Most Highs of Edentia, approved by the Assigned Sentinel of Jerusem, and appointed by Gabriel of Salvington in accordance with the mandate of Michael. The temporary appointees function just as fully as do the permanent members of this commission of special supervisors.
 \vs p114 2:2 This board of planetary directors is especially concerned with the supervision of those activities on this world which result from the fact that Michael here experienced his terminal bestowal. They are kept in close and immediate touch with Michael by the liaison activities of a certain Brilliant Evening Star, the identical being who attended upon Jesus throughout the mortal bestowal.
 \vs p114 2:3 At the present time one John, known to you as “the Baptist,” is chairman of this council when it is in session on Jerusem. But the ex officio head of this council is the Assigned Sentinel of Satania, the direct and personal representative of the Associate Inspector on Salvington and of the Supreme Executive of Orvonton.
 \vs p114 2:4 The members of this same commission of former Urantians also act as advisory supervisors of the 36 other rebellion\hyp{}isolated worlds of the system; they perform a very valuable service in keeping Lanaforge, the System Sovereign, in close and sympathetic touch with the affairs of these planets, which still remain more or less under the overcontrol of the Constellation Fathers of Norlatiadek. These 24 counsellors make frequent trips as individuals to each of the quarantined planets, especially to Urantia.
@@ -47,8 +47,8 @@
 \vs p114 6:2 These 12 groups of angels, while functioning under the general supervision of the resident governor general, are immediately directed by the seraphic council of 12, the acting chiefs of each group. This council also serves as the volunteer cabinet of the resident governor general.
 \vs p114 6:3 As planetary chief of seraphim, I preside over this council of seraphic chiefs, and I am a volunteer supernaphim of the primary order serving on Urantia as the successor of the onetime chief of the angelic hosts of the planet who defaulted at the time of the Caligastia secession.
 \vs p114 6:4 The 12 corps of the master seraphim of planetary supervision are functional on Urantia as follows:
-\vs p114 6:5 \ublistelem{1.}\bibnobreakspace \bibemph{The epochal angels.} These are the angels of the current age, the dispensational group. These celestial ministers are intrusted with the oversight and direction of the affairs of each generation as they are designed to fit into the mosaic of the age in which they occur. The present corps of epochal angels serving on Urantia is the third group assigned to the planet during the current dispensation.
-\vs p114 6:6 \ublistelem{2.}\bibnobreakspace \bibemph{The progress angels.} These seraphim are intrusted with the task of initiating the evolutionary progress of the successive social ages. They foster the development of the inherent progressive trend of evolutionary creatures; they labour incessantly to make things what they ought to be. The group now on duty is the second to be assigned to the planet.
+\vs p114 6:5 \ublistelem{1.}\bibnobreakspace \bibemph{The epochal angels.} These are the angels of the current age, the dispensational group. These celestial ministers are entrusted with the oversight and direction of the affairs of each generation as they are designed to fit into the mosaic of the age in which they occur. The present corps of epochal angels serving on Urantia is the third group assigned to the planet during the current dispensation.
+\vs p114 6:6 \ublistelem{2.}\bibnobreakspace \bibemph{The progress angels.} These seraphim are entrusted with the task of initiating the evolutionary progress of the successive social ages. They foster the development of the inherent progressive trend of evolutionary creatures; they labour incessantly to make things what they ought to be. The group now on duty is the second to be assigned to the planet.
 \vs p114 6:7 \ublistelem{3.}\bibnobreakspace \bibemph{The religious guardians.} These are the “angels of the churches,” the earnest contenders for that which is and has been. They endeavour to maintain the ideals of that which has survived for the sake of the safe transit of moral values from one epoch to another. They are the checkmates of the angels of progress, all the while seeking to translate from one generation to another the imperishable values of the old and passing forms into the new and therefore less stabilized patterns of thought and conduct. These angels do contend for spiritual forms, but they are not the source of ultrasectarianism and meaningless controversial divisions of professed religionists. The corps now functioning on Urantia is the fifth thus to serve.
 \vs p114 6:8 \ublistelem{4.}\bibnobreakspace \bibemph{The angels of nation life.} These are the “angels of the trumpets,” directors of the political performances of Urantia national life. The group now functioning in the overcontrol of international relations is the fourth corps to serve on the planet. It is particularly through the ministry of this seraphic division that “the Most Highs rule in the kingdoms of men.”
 \vs p114 6:9 \ublistelem{5.}\bibnobreakspace \bibemph{The angels of the races.} Those who work for the conservation of the evolutionary races of time, regardless of their political entanglements and religious groupings. On Urantia there are remnants of nine human races which have commingled and combined into the people of modern times. These seraphim are closely associated with the ministry of the race commissioners, and the group now on Urantia is the original corps assigned to the planet soon after the day of Pentecost.
