--- a/tex/p165.tex
+++ b/tex/p165.tex
@@ -16,7 +16,7 @@
 \vs p165 2:5 \pc And when Jesus had spoken this parable, no one asked him a question. After a time he began again to speak and went on to discuss the parable:
 \vs p165 2:6 \textcolour{ubdarkred}{“You who would be the undershepherds of my Father’s flocks must not only be worthy leaders, but you must also \bibemph{feed} the flock with good food; you are not true shepherds unless you lead your flocks into green pastures and beside still waters.}
 \vs p165 2:7 \textcolour{ubdarkred}{“And now, lest some of you too easily comprehend this parable, I will declare that I am both the door to the Father’s sheepfold and at the same time the true shepherd of my Father’s flocks. Every shepherd who seeks to enter the fold without me shall fail, and the sheep will not hear his voice. I, with those who minister with me, am the door. Every soul who enters upon the eternal way by the means I have created and ordained shall be saved and will be able to go on to the attainment of the eternal pastures of Paradise.}
-\vs p165 2:8 \textcolour{ubdarkred}{“But I also am the true shepherd who is willing even to lay down his life for the sheep. The thief breaks into the fold only to steal, and to kill, and to destroy; but I have come that you all may have life and have it more abundantly. He who is a hireling, when danger arises, will flee and allow the sheep to be scattered and destroyed; but the true shepherd will not flee when the wolf comes; he will protect his flock and, if necessary, lay down his life for his sheep. Verily, verily, I say to you, friends and enemies, I am the true shepherd; I know my own and my own know me. I will not flee in the face of danger. I will finish this service of the completion of my Father’s will, and I will not forsake the flock which the Father has intrusted to my keeping.}
+\vs p165 2:8 \textcolour{ubdarkred}{“But I also am the true shepherd who is willing even to lay down his life for the sheep. The thief breaks into the fold only to steal, and to kill, and to destroy; but I have come that you all may have life and have it more abundantly. He who is a hireling, when danger arises, will flee and allow the sheep to be scattered and destroyed; but the true shepherd will not flee when the wolf comes; he will protect his flock and, if necessary, lay down his life for his sheep. Verily, verily, I say to you, friends and enemies, I am the true shepherd; I know my own and my own know me. I will not flee in the face of danger. I will finish this service of the completion of my Father’s will, and I will not forsake the flock which the Father has entrusted to my keeping.}
 \vs p165 2:9 \textcolour{ubdarkred}{“But I have many other sheep not of this fold, and these words are true not only of this world. These other sheep also hear and know my voice, and I have promised the Father that they shall all be brought into one fold, one brotherhood of the sons of God. And then shall you all know the voice of one shepherd, the true shepherd, and shall all acknowledge the fatherhood of God.}
 \vs p165 2:10 \textcolour{ubdarkred}{“And so shall you know why the Father loves me and has put all of his flocks in this domain in my hands for keeping; it is because the Father knows that I will not falter in the safeguarding of the sheepfold, that I will not desert my sheep, and that, if it shall be required, I will not hesitate to lay down my life in the service of his manifold flocks. But, mind you, if I lay down my life, I will take it up again. No man nor any other creature can take away my life. I have the right and the power to lay down my life, and I have the same power and right to take it up again. You cannot understand this, but I received such authority from my Father even before this world was.”}
 \vs p165 2:11 \pc When they heard these words, his apostles were confused, his disciples were amazed, while the Pharisees from Jerusalem and around about went out into the night, saying, “He is either mad or has a devil.” But even some of the Jerusalem teachers said: “He speaks like one having authority; besides, who ever saw one having a devil open the eyes of a man born blind and do all of the wonderful things which this man has done?”
