--- a/tex/p176.tex
+++ b/tex/p176.tex
@@ -13,7 +13,7 @@
 \usection{2.\bibnobreakspace The Master’s Second Coming}
 \vs p176 2:1 On several occasions Jesus had made statements which led his hearers to infer that, while he intended presently to leave this world, he would most certainly return to consummate the work of the heavenly kingdom. As the conviction grew on his followers that he was going to leave them, and after he had departed from this world, it was only natural for all believers to lay fast hold upon these promises to return. The doctrine of the second coming of Christ thus became early incorporated into the teachings of the Christians, and almost every subsequent generation of disciples has devoutly believed this truth and has confidently looked forward to his sometime coming.
 \vs p176 2:2 If they were to part with their Master and Teacher, how much more did these first disciples and the apostles grasp at this promise to return, and they lost no time in associating the predicted destruction of Jerusalem with this promised second coming. And they continued thus to interpret his words notwithstanding that, throughout this evening of instruction on Mount Olivet, the Master took particular pains to prevent just such a mistake.
-\vs p176 2:3 \pc In further answer to Peter’s question, Jesus said: \textcolour{ubdarkred}{“Why do you still look for the Son of Man to sit upon the throne of David and expect that the material dreams of the Jews will be fulfilled? Have I not told you all these years that my kingdom is not of this world? The things which you now look down upon are coming to an end, but this will be a new beginning out of which the gospel of the kingdom will go to all the world and this salvation will spread to all peoples. And when the kingdom shall have come to its full fruition, be assured that the Father in heaven will not fail to visit you with an enlarged revelation of truth and an enhanced demonstration of righteousness, even as he has already bestowed upon this world him who became the prince of darkness, and then Adam, who was followed by Melchizedek, and in these days, the Son of Man. And so will my Father continue to manifest his mercy and show forth his love, even to this dark and evil world. So also will I, after my Father has invested me with all power and authority, continue to follow your fortunes and to guide in the affairs of the kingdom by the presence of my spirit, who shall shortly be poured out upon all flesh. Even though I shall thus be present with you in spirit, I also promise that I will sometime return to this world, where I have lived this life in the flesh and achieved the experience of simultaneously revealing God to man and leading man to God. Very soon must I leave you and take up the work the Father has intrusted to my hands, but be of good courage, for I will sometime return. In the meantime, my Spirit of the Truth of a universe shall comfort and guide you.}
+\vs p176 2:3 \pc In further answer to Peter’s question, Jesus said: \textcolour{ubdarkred}{“Why do you still look for the Son of Man to sit upon the throne of David and expect that the material dreams of the Jews will be fulfilled? Have I not told you all these years that my kingdom is not of this world? The things which you now look down upon are coming to an end, but this will be a new beginning out of which the gospel of the kingdom will go to all the world and this salvation will spread to all peoples. And when the kingdom shall have come to its full fruition, be assured that the Father in heaven will not fail to visit you with an enlarged revelation of truth and an enhanced demonstration of righteousness, even as he has already bestowed upon this world him who became the prince of darkness, and then Adam, who was followed by Melchizedek, and in these days, the Son of Man. And so will my Father continue to manifest his mercy and show forth his love, even to this dark and evil world. So also will I, after my Father has invested me with all power and authority, continue to follow your fortunes and to guide in the affairs of the kingdom by the presence of my spirit, who shall shortly be poured out upon all flesh. Even though I shall thus be present with you in spirit, I also promise that I will sometime return to this world, where I have lived this life in the flesh and achieved the experience of simultaneously revealing God to man and leading man to God. Very soon must I leave you and take up the work the Father has entrusted to my hands, but be of good courage, for I will sometime return. In the meantime, my Spirit of the Truth of a universe shall comfort and guide you.}
 \vs p176 2:4 \textcolour{ubdarkred}{“You behold me now in weakness and in the flesh, but when I return, it shall be with power and in the spirit. The eye of flesh beholds the Son of Man in the flesh, but only the eye of the spirit will behold the Son of Man glorified by the Father and appearing on earth in his own name.}
 \vs p176 2:5 \textcolour{ubdarkred}{“But the times of the reappearing of the Son of Man are known only in the councils of Paradise; not even the angels of heaven know when this will occur. However, you should understand that, when this gospel of the kingdom shall have been proclaimed to all the world for the salvation of all peoples, and when the fullness of the age has come to pass, the Father will send you another dispensational bestowal, or else the Son of Man will return to adjudge the age.}
 \vs p176 2:6 \textcolour{ubdarkred}{“And now concerning the travail of Jerusalem, about which I have spoken to you, even this generation will not pass away until my words are fulfilled; but concerning the times of the coming again of the Son of Man, no one in heaven or on earth may presume to speak. But you should be wise regarding the ripening of an age; you should be alert to discern the signs of the times. You know when the fig tree shows its tender branches and puts forth its leaves that summer is near. Likewise, when the world has passed through the long winter of material\hyp{}mindedness and you discern the coming of the spiritual springtime of a new dispensation, should you know that the summertime of a new visitation draws near.}
@@ -24,9 +24,9 @@
 \vs p176 3:1 As they gathered about the campfire, some 20 of them, Thomas asked: “Since you are to return to finish the work of the kingdom, what should be our attitude while you are away on the Father’s business?” As Jesus looked them over by the firelight, he answered:\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[scale=\tunemarkup{pgkobomini}{0.46}\tunemarkup{pgkoboaurahd}{0.52}\tunemarkup{pghanlin}{0.46}\tunemarkup{pgnexus7}{0.47}\tunemarkup{pgkindledx}{0.36}]{../urantia-pictures/The-Master-Teacher.jpg}\caption{The Master Teacher by Michael~Dudash}\end{figure}}
 \vs p176 3:2 \pc \textcolour{ubdarkred}{“And even you, Thomas, fail to comprehend what I have been saying. Have I not all this time taught you that your connection with the kingdom is spiritual and individual, wholly a matter of personal experience in the spirit by the faith\hyp{}realization that you are a son of God? What more shall I say? The downfall of nations, the crash of empires, the destruction of the unbelieving Jews, the end of an age, even the end of the world, what have these things to do with one who believes this gospel, and who has hid his life in the surety of the eternal kingdom? You who are God\hyp{}knowing and gospel\hyp{}believing have already received the assurances of eternal life. Since your lives have been lived in the spirit and for the Father, nothing can be of serious concern to you. Kingdom builders, the accredited citizens of the heavenly worlds, are not to be disturbed by temporal upheavals or perturbed by terrestrial cataclysms. What does it matter to you who believe this gospel of the kingdom if nations overturn, the age ends, or all things visible crash, since you know that your life is the gift of the Son, and that it is eternally secure in the Father? Having lived the temporal life by faith and having yielded the fruits of the spirit as the righteousness of loving service for your fellows, you can confidently look forward to the next step in the eternal career with the same survival faith that has carried you through your first and earthly adventure in sonship with God.}
 \vs p176 3:3 \textcolour{ubdarkred}{“Each generation of believers should carry on their work, in view of the possible return of the Son of Man, exactly as each individual believer carries forward his lifework in view of inevitable and ever\hyp{}impending natural death. When you have by faith once established yourself as a son of God, nothing else matters as regards the surety of survival. But make no mistake! this survival faith is a living faith, and it increasingly manifests the fruits of that divine spirit which first inspired it in the human heart. That you have once accepted sonship in the heavenly kingdom will not save you in the face of the knowing and persistent rejection of those truths which have to do with the progressive spiritual fruit\hyp{}bearing of the sons of God in the flesh. You who have been with me in the Father’s business on earth can even now desert the kingdom if you find that you love not the way of the Father’s service for mankind.}
-\vs p176 3:4 “As individuals, and as a generation of believers, hear me while I speak a parable: There was a certain great man who, before starting out on a long journey to another country, called all his trusted servants before him and delivered into their hands all his goods. To one he gave five talents, to another two, and to another one. And so on down through the entire group of honoured stewards, to each he intrusted his goods according to their several abilities; and then he set out on his journey. When their lord had departed, his servants set themselves at work to gain profits from the wealth intrusted to them. Immediately he who had received five talents began to trade with them and very soon had made a profit of another five talents. In like manner he who had received two talents soon had gained two more. And so did all of these servants make gains for their master except him who received but one talent. He went away by himself and dug a hole in the earth where he hid his lord’s money. Presently the lord of those servants unexpectedly returned and called upon his stewards for a reckoning. And when they had all been called before their master, he who had received the five talents came forward with the money which had been intrusted to him and brought five additional talents, saying, ‘Lord, you gave me five talents to invest, and I am glad to present five other talents as my gain.’ And then his lord said to him: ‘Well done, good and faithful servant, you have been faithful over a few things; I will now set you as steward over many; enter forthwith into the joy of your lord.’ And then he who had received the two talents came forward, saying: ‘Lord, you delivered into my hands two talents; behold, I have gained these other two talents.’ And his lord then said to him: ‘Well done, good and faithful steward; you also have been faithful over a few things, and I will now set you over many; enter you into the joy of your lord.’ And then there came to the accounting he who had received the one talent. This servant came forward, saying, ‘Lord, I knew you and realized that you were a shrewd man in that you expected gains where you had not personally laboured; therefore was I afraid to risk aught of that which was intrusted to me. I safely hid your talent in the earth; here it is; you now have what belongs to you.’ But his lord answered: ‘You are an indolent and slothful steward. By your own words you confess that you knew I would require of you an accounting with reasonable profit, such as your diligent fellow servants have this day rendered. Knowing this, you ought, therefore, to have at least put my money into the hands of the bankers that on my return I might have received my own with interest.’ And then to the chief steward this lord said: ‘Take away this one talent from this unprofitable servant and give it to him who has the ten talents.’\fnc{And so did all of these servants make gains for their master except \bibtextul{he} who received but one talent. \bibexpl{The pronoun is the object of the preposition “except” therefore “him” is correct. See last sentence in subject paragraph for parallel usage where “him” is object of “to” also creating a “him who” phrase.}}
+\vs p176 3:4 “As individuals, and as a generation of believers, hear me while I speak a parable: There was a certain great man who, before starting out on a long journey to another country, called all his trusted servants before him and delivered into their hands all his goods. To one he gave five talents, to another two, and to another one. And so on down through the entire group of honoured stewards, to each he entrusted his goods according to their several abilities; and then he set out on his journey. When their lord had departed, his servants set themselves at work to gain profits from the wealth entrusted to them. Immediately he who had received five talents began to trade with them and very soon had made a profit of another five talents. In like manner he who had received two talents soon had gained two more. And so did all of these servants make gains for their master except him who received but one talent. He went away by himself and dug a hole in the earth where he hid his lord’s money. Presently the lord of those servants unexpectedly returned and called upon his stewards for a reckoning. And when they had all been called before their master, he who had received the five talents came forward with the money which had been entrusted to him and brought five additional talents, saying, ‘Lord, you gave me five talents to invest, and I am glad to present five other talents as my gain.’ And then his lord said to him: ‘Well done, good and faithful servant, you have been faithful over a few things; I will now set you as steward over many; enter forthwith into the joy of your lord.’ And then he who had received the two talents came forward, saying: ‘Lord, you delivered into my hands two talents; behold, I have gained these other two talents.’ And his lord then said to him: ‘Well done, good and faithful steward; you also have been faithful over a few things, and I will now set you over many; enter you into the joy of your lord.’ And then there came to the accounting he who had received the one talent. This servant came forward, saying, ‘Lord, I knew you and realized that you were a shrewd man in that you expected gains where you had not personally laboured; therefore was I afraid to risk aught of that which was entrusted to me. I safely hid your talent in the earth; here it is; you now have what belongs to you.’ But his lord answered: ‘You are an indolent and slothful steward. By your own words you confess that you knew I would require of you an accounting with reasonable profit, such as your diligent fellow servants have this day rendered. Knowing this, you ought, therefore, to have at least put my money into the hands of the bankers that on my return I might have received my own with interest.’ And then to the chief steward this lord said: ‘Take away this one talent from this unprofitable servant and give it to him who has the ten talents.’\fnc{And so did all of these servants make gains for their master except \bibtextul{he} who received but one talent. \bibexpl{The pronoun is the object of the preposition “except” therefore “him” is correct. See last sentence in subject paragraph for parallel usage where “him” is object of “to” also creating a “him who” phrase.}}
 \vs p176 3:5 \textcolour{ubdarkred}{“To every one who has, more shall be given, and he shall have abundance; but from him who has not, even that which he has shall be taken away. You cannot stand still in the affairs of the eternal kingdom. My Father requires all his children to grow in grace and in a knowledge of the truth. You who know these truths must yield the increase of the fruits of the spirit and manifest a growing devotion to the unselfish service of your fellow servants. And remember that, inasmuch as you minister to one of the least of my brethren, you have done this service to me.}
-\vs p176 3:6 \textcolour{ubdarkred}{“And so should you go about the work of the Father’s business, now and henceforth, even forevermore. Carry on until I come. In faithfulness do that which is intrusted to you, and thereby shall you be ready for the reckoning call of death. And having thus lived for the glory of the Father and the satisfaction of the Son, you shall enter with joy and exceedingly great pleasure into the eternal service of the everlasting kingdom.”}
+\vs p176 3:6 \textcolour{ubdarkred}{“And so should you go about the work of the Father’s business, now and henceforth, even forevermore. Carry on until I come. In faithfulness do that which is entrusted to you, and thereby shall you be ready for the reckoning call of death. And having thus lived for the glory of the Father and the satisfaction of the Son, you shall enter with joy and exceedingly great pleasure into the eternal service of the everlasting kingdom.”}
 \vs p176 3:7 \pc Truth is living; the Spirit of Truth is ever leading the children of light into new realms of spiritual reality and divine service. You are not given truth to crystallize into settled, safe, and honoured forms. Your revelation of truth must be so enhanced by passing through your personal experience that new beauty and actual spiritual gains will be disclosed to all who behold your spiritual fruits and in consequence thereof are led to glorify the Father who is in heaven. Only those faithful servants who thus grow in the knowledge of the truth, and who thereby develop the capacity for divine appreciation of spiritual realities, can ever hope to “enter fully into the joy of their Lord.” What a sorry sight for successive generations of the professed followers of Jesus to say, regarding their stewardship of divine truth: “Here, Master, is the truth you committed to us 100 or 1,000 years ago. We have lost nothing; we have faithfully preserved all you gave us; we have allowed no changes to be made in that which you taught us; here is the truth you gave us.” But such a plea concerning spiritual indolence will not justify the barren steward of truth in the presence of the Master. In accordance with the truth committed to your hands will the Master of truth require a reckoning.
 \vs p176 3:8 In the next world you will be asked to give an account of the endowments and stewardships of this world. Whether inherent talents are few or many, a just and merciful reckoning must be faced. If endowments are used only in selfish pursuits and no thought is bestowed upon the higher duty of obtaining increased yield of the fruits of the spirit, as they are manifested in the ever\hyp{}expanding service of men and the worship of God, such selfish stewards must accept the consequences of their deliberate choosing.
 \vs p176 3:9 And how much like all selfish mortals was this unfaithful servant with the one talent in that he blamed his slothfulness directly upon his lord. How prone is man, when he is confronted with the failures of his own making, to put the blame upon others, oftentimes upon those who least deserve it!
